Finish evaluation part, synopsis update

--- a/Dissertation/part_theory.tex
+++ b/Dissertation/part_theory.tex
@@ -400,7 +400,143 @@ $$\conc{CPA_{PS}(\mathbb{D}, e_0, \pi_0)} \supseteq Reach_{\tcarrow}(\conc{\{e_0
 \section{Адаптивный статический анализ с раздельным рассмотрением потоков}
 \label{sect_tm_cpa}
 
-\subsection{Основная идея}
+\subsection{Общая схема метода}
+
+Рассмотрим простую программу, в которой всего два потока (рис.~\ref{fig:ExapmleTM}).
+
+\begin{figure}[h]
+\begin{minipage}[h]{0.45\textwidth}
+\begin{verbatim}
+  volatile int g = 0;
+  Thread1 {
+  1:  g = 1;
+  2:  d = 1;
+  3:  …
+  }
+\end{verbatim}
+\end{minipage}
+\hfill
+\begin{minipage}[h]{0.45\textwidth}
+\begin{verbatim}
+  volatile int d = 0;
+  Thread2 {
+  4:  if (d == 1) {
+  5:    g = 2;
+  6:  }
+  }
+\end{verbatim}
+\end{minipage}
+\caption{Пример небольшой программы}
+\label{fig:ExapmleTM}
+\end{figure}
+
+Это некоторый модельный пример, в котором используется конструкция неявной синхронизации между потоками: первый поток инициализирует некоторые данные (в данном случае, глобальную переменную g), а затем выставляет флаг, что данные готовы.
+Второй поток может использовать эти данные только после выставления флага, поэтому в этом примере нет состояния гонки для переменной g.
+Классические методы проверки моделей перебирают все возможные варианты чередования двух потоков.
+
+С точки зрения инструмента статической верификации, необходимо рассмотреть полное множество состояний программы, которые возникают при всех возможных чередованиях  (рис.~\ref{img:interleavings}).
+
+\begin{figure}[ht] 
+  \centering
+  \includegraphics [scale=0.7] {ExampleInterleaving2}
+  \caption{Построение множества чередований}
+  \label{img:interleavings}
+\end{figure}
+
+Даже в простом примере и при различных оптимизациях общее число состояний растет с катастрофической скоростью.
+Происходит так называемый «комбинаторный взрыв» числа состояний, что приводит к исчерпанию ресурсов.
+Таким образом, классические методы проверки моделей не могут обеспечить доказательства корректности программы.
+
+Простые методы статического анализа пытаются вычислить аппроксимацию сверху возможных действий одного потока на другой, т.н. эффект потока.
+Однако, они не способны прослеживать сложные зависимости между переменными.
+Например, зависимости между глобальными переменными, которые, в свою очередь, могут быть модифицированы из других потоков.
+В общем случае, это требует вычисления некоторой неподвижной точки, что является нежелательным при статическом анализе, так как значительно возрастают требования к ресурсам.
+В итоге, в таких сложных случаях считается, что глобальные переменные могут принимать любые значения.
+А это, в свою очередь, снижает точность анализа. 
+
+Предлагаемый подход базируется на известной идее раздельного анализа потоков (thread-modular approach).
+Потоки в этом случае анализируются по-отдельности, одновременно с этим строится общее для всех потоков окружение, которое аппроксимирует сверху влияние других потоков.
+Это окружение формируется на основе анализа всех потоков, так как каждый поток являются частью окружения для других потоков.
+Для каждого потока определяется, как и в каких условиях он может модифицировать разделяемые данные, использовать примитивы синхронизации и выполнять иные действия, влияющие на другие потоки.
+Точность анализа потока зависит от того, как точно будет сформировано окружение.
+Однако, остается вопрос как эффективно вычислять и представлять окружение.
+
+При анализе последовательных программ успешной техникой, позволяющей уменьшить число рассматриваемых состояний программы, является абстракция.
+Она позволяет абстрагироваться от несущественных деталей программы и рассматривать обобщенные (абстрактные) состояния, которые могут соответствовать целому множеству реальных (конкретных) состояний программы.
+Это позволяет значительно сократить пространство состояний.
+Ключевой идеей предлагаемого подхода является расширение абстракции не только на состояния программы, но и на операции, то есть, переходы потока.
+Настраивая уровень абстракции, можно получать варианты анализа, которые будут ближе к статическому анализу многопоточных программ, или к классической статической верификации. 
+
+\begin{figure}[ht] 
+  \centering
+  \includegraphics [scale=1] {ExampleInit}
+  \caption{Построение абстрактных переходов двух потоков}
+  \label{img:exampleInit}
+\end{figure}
+
+Рисунок~\ref{img:exampleInit} показывает часть абстрактного графа достижимости (англ. Abstract Reachability Graph, ARG) для первого и второго потока без влияния друг на друга.
+Представленный анализ основан на простом анализе явных значений, который отслеживает только явные значения переменных.
+Переход содержит в себе абстрактное состояние и абстрактную операцию.
+Первое абстрактное состояние содержит информацию только о значении глобальной переменной x.
+Новая информация о значении переменной y появляется в дочерних элементах, после того как выполнен переход, соответствующей инициализации переменной. 
+
+Теперь необходимо учесть влияние потоков друг на друга, то есть сформировать окружение.
+Будем называть проекцией операции потока описание ее эффекта, видимого для других потоков.
+Например, любые модификации локальных переменных потока не влияют на другие потоки, то есть их проекция является пустой операцией.
+Модификация глобальной переменной является значимой для всех потоков, поэтому ее проекция должна совпадать с самой операцией, либо аппроксимировать ее сверху, например, теряя информацию о точном присваиваемом значении.
+При этом в проекции может быть не только информация о самом действии, но и об условии на его применение к другому потоку.
+Например, на рисунке~\ref{img:exampleComplete} первый поток, присваивая $g = 1$ меняет значение переменной g с нуля на единицу.
+Можно представить проекцию этой операции таким образом: если значение переменной x равно нулю, то оно может быть изменено на единицу.
+Иными словами, проекция состоит из двух частей: условия ее применения ($[g == 0]$) и непосредственно действия $(g \rightarrow 1)$. 
+
+При анализе некоторого потока одновременно строится его представление для остальных в качестве окружения.
+Оно состоит из набора проекций операций этого потока.
+Далее каждая из этих проекций должна быть применена ко всем возможным (с учетом условий внутри проекций) состояниям других потоков.
+Что, в свою очередь, может породить новые, еще не исследованные состояния, а значит, и проекции.
+
+После построения переходов в потоках независимо друг от друга (рисунок~\ref{img:exampleInit}), для всех переходов вычисляются проекции.
+Для второго потока, например, это действие, которое меняет значение переменной x значение с нуля на тройку.
+Остальные действия второго потока не модифицируют глобальные переменные и не порождают значимых проекций.
+Затем эта проекция применяется к каждому состоянию первого потока.
+На рисунке~\ref{img:exampleComplete} приведен результат применения к первому переходу.
+Также эту проекцию можно применить и ко второму, однако, никаких новых путей это не породит.
+К третьему переходу первого потока применить данную проекцию нельзя, так как значение переменной x не удовлетворяет условию проекции.
+Применение проекции к первому переходу порождает новый путь выполнения, который в свою очередь может породить новые проекции.
+
+\begin{figure}[ht] 
+  \centering
+  \includegraphics [scale=0.7] {ExampleComplete}
+  \caption{Построение абстрактных переходов двух потоков}
+  \label{img:exampleComplete}
+\end{figure}
+
+На рисунке~\ref{img:exampleComplete} представлен вариант с точными проекциями, которые рассматривают переходы другого потока так, как они есть.
+На рисунке представлены не все возможные проекции и порожденные ими переходы.
+Например, отсутствует проекция перехода $g = 2$ второго потока. 
+
+Для проверки возможности состояния гонки нам необходимо найти два перехода, которые модифицируют одну переменную: $g = 1$ в первом потоке и $g = 2$ во втором.
+Далее, необходимо проверить, являются ли два абстрактных состояния совместными, то есть, могут ли они быть частью одного глобального состояния.
+В данном случае, в частичных состояниях потока значения глобальных переменных имеют разные значения, а значит, они не могут быть частью одного глобального состояния, то есть, указанные два перехода не могут быть выполнены одновременно.
+Отсюда следует, что состояние гонки отсутствует.
+
+Предлагаемый подход предоставляет гибкие варианты конфигурации для решения каждой конкретной задачи.
+Как было показано на примерах, проекции действий потока могут быть представлены более точной абстракцией или, наоборот, слишком общей.
+Проекции нескольких операций могут быть объединены в одну или быть рассмотрены по-отдельности.
+Это позволяет выбирать необходимый баланс между точностью и скоростью.
+
+Рассмотрим другой вариант построения абстрактных переходов на рисунке~\ref{img:exampleComplete2}.
+
+\begin{figure}[ht] 
+  \centering
+  \includegraphics [scale=0.7] {ExampleComplete2-rus}
+  \caption{Построение абстрактных переходов двух потоков}
+  \label{img:exampleComplete2}
+\end{figure}
+
+Здесь используется более абстрактное представление проекции, при котором несколько воздействий потока объединяются в одну проекцию (эффект от окружения).
+При этом обычно теряется некоторая информация. В частности, в данном случае была потеряна информация о точном значении переменной g, и поэтому данный объединенный эффект может применяться при любых ее значениях. Это позволяет сократить число состояний для анализа.
+Пример показывает, как анализ рассматривает эффекты влияния одного потока на другой, что гарантирует корректность подхода.
+Более того, он показывает гибкость подхода, который позволяет варьировать уровень абстракции, например, на стадии построения проекции, выбирая уровень абстракции каждого перехода в окружении.
 
 \subsection{Формальное описание внутреннего CPA}
  
@@ -2472,7 +2608,7 @@ $E^T_V = 2^{X \to \mathcal{Z}} \cup G$.
 Метод поиска состояния гонки заключается в построении множества достижимых абстрактных переходов с помощью алгоритма CPA~\ref{cpa_algorithm_ps}, а затем в поиске пары абстрактных переходов, начальные состояния которых являются совместными, а сами переходы производят доступ к разделяемой области памяти, при этом хотя бы один из доступов является записью.
 
 Построение множества достижимых состояний производится с помощью комбинации описаных ранее CPA.
-Возможны различные конфигурации, в зависимости от поставленной задачи, но, например, такая: анализ точек программы $\mathcal{L}$, анализ потоков $\mathbb{T}$, анализ примитивов синхронизации $\mathbb{S}$ и анализ предикатов $\mathbb{P}$. Все эти анализы объединяются с помощью композитного анализа $\mathbb{C}$. Кроме различного множества используемых CPA возможно более точная настройка каждого CPA в отдельности, например, изменением варианта оператора $merge$.
+Возможны различные конфигурации, в зависимости от поставленной задачи, например, такая: анализ точек программы $\mathcal{L}$, анализ потоков $\mathbb{T}$, анализ примитивов синхронизации $\mathbb{S}$ и анализ предикатов $\mathbb{P}$. Все эти анализы объединяются с помощью композитного анализа $\mathbb{C}$. Кроме различного множества используемых CPA возможно более точная настройка каждого CPA в отдельности, например, изменением варианта оператора $merge$.
 
 Тем не менее, было показано, что операторы каждого из этих видов анализа удовлетворяют условиям~\ref{cpa_transfer_eq},~\ref{cpa_merge_eq},~\ref{cpa_stop_eq},~\ref{cpa_prec_eq}, а значит, позволяют утверждать по теореме~\ref{thrm_soundness}, что множество вычесленных абстрактных состояний аппроксимирует свержу множество конкретных состояний программы.
 Таким образом, если в числе абстрактных состояний программы присутствует ошибочное, значит, программа не соответствует поставленной спецификации.
