--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -29,21 +29,21 @@
 В четвертой главе представлены результаты апробации на частных примерах: как на множестве тестовых примеров, так и на реальном системном коде.
 
 \underline{\textbf{Первая глава}} посвящена обзору существующих методов поиска ошибок использования различных примитивов синхронизации в многопоточном программном обеспечении.
-В разделе 1 рассматриваются различные методы статической верификации (англ. software model checking).
+В разделе 1.1 рассматриваются различные методы статической верификации (англ. software model checking).
 Такие методы основаны на том, что автоматически строится некоторая формальная модель программы, а затем эта модель проверяется на соответствие заданным свойствам.
 Такие методы являются достаточно точными при условии, что модель достаточно хорошо соответствует исходной программе.
 Одним из важных минусов таких методов являются высокие требования к ресурсам.
 Другим минусом статической верификации является то, что на реальном программном обеспечении достаточно сложно достигнуть высокого уровня соответствия модели и исходной программы, что приводит к большому количеству ложных срабатываний.
 К плюсам можно отнести возможность формального доказательства, что в программе отсутствуют дефекты определенного типа, опять же, при условии адекватности построенной модели.
 
-В разделе 2 рассматриваются методы статического анализа.
+В разделе 1.2 рассматриваются методы статического анализа.
 Эти методы похожи на те, которые были рассмотрены в предыдущем разделе, однако, в отличие от методов проверки моделей, методы статического анализа не ставят целью возможность доказательства отсутствия ошибок в программе.
 Основной задачей таких методов является нахождение как можно большего числа ошибок при наименьших затратах ресурсов. 
 Многие из методов статического анализа являются корректными, то есть способны не пропускать ошибки, но в этом случае процент ложных срабатываний будет слишком большой.
 Большое количество ложных срабатываний сильно затрудняет ручной анализ предупреждений, поэтому зачастую применяются различные фильтры, которые сокращают число ложных сообщений об ошибках.
 Однако такие фильтры являются лишь неточными эвристиками, которые снижают корректность метода в целом и способны привести к пропуску реальной ошибки.
 
-В разделе 3 рассматриваются методы динамического анализа.
+В разделе 1.3 рассматриваются методы динамического анализа.
 Такие методы применяются для поиска ошибок синхронизации во время работы программы, поэтому одна из основных характеристик таких методов - это замедление целевой программы. 
 Одной из характерных особенностей данного метода является возможность гарантировать, что обнаруженное предупреждение является реальной ошибкой, а не ложной. 
 Однако, такая возможность доступна, если поиск ошибок производится только на тех путях, которые были получены при конкретном выполнении программы.
@@ -51,7 +51,7 @@
 Такой подход значительно ускоряет процесс анализа, но приводит к получению ложных предупреждений. 
 Тем не менее, процент ложных предупреждений у инструментов, реализующих методы динамического анализа, обычно значительно ниже, чем у тех, что основаны на других подходах.
 
-В разделе 4 подводятся основные итоги обзора и делаются выводы.
+В разделе 1.4 подводятся основные итоги обзора и делаются выводы.
 Результаты обзора позволяют заключить, что основные усилия сейчас сосредаточены на анализе пользовательских приложений, 
 системное программное обеспечение является слишком объемным и слишком сложным для применения общецелевых методов.
 Применение методов динамического анализа к системному программному обеспечению осложняется тем, что требуется трудоемкая настройка тестового окружения, в том числе аппаратуры.
@@ -80,76 +80,156 @@
 Таким образом, ошибка не может быть пропущена.
 Именно в этом смысле далее используется термин корректность анализа (англ. soundness).
 
-В разделе 1 описана семантика многопоточных программ. 
+В разделе 2.1 описана семантика многопоточных программ. 
 Формальная модель программы определяется, как множество конкретных состояний программы, которые описываются значениями переменных каждого из потоков, а также глобальных переменных, статусом примитивов синхронизации и информацией об активных потоках.
 Далее описывается семантика всех поддерживаемых операторов программы, то есть задаются правила преобразования конкретных состояний операторами программы.
 В число поддерживаемых операторов входят операторы сравнения (англ. assumption), присваивания (англ. assignment),
-кроме того, специальные операторы работы с примитивами синхронизации: захват блокировки и ее освобождение, а также операции с потоками: создание потока (thread\_create) и ожидания завершения потока (thread\_join).
-В заключении даны определения ошибки в программе, в частности, определение состояния гонки по данным.
+кроме того, специальные операторы работы с примитивами синхронизации: захват блокировки и ее освобождение, а также создание потока (thread\_create)
+% и ожидания завершения потока (thread\_join).
+В заключении даны определения ошибки в программе, в частности, определение состояния гонки.
 
-В разделе 2 описан обобщенный алгоритм анализа программы, который оперирует абстрактными состояниями программы, то есть такими, которым может соответствовать некоторое множество конкретных.
-Обычно для доказательства отсутствия ошибок в программе не требуется строить абстракцию с большим уровнем точности, так как многие детали модели являются ненужными. 
-В этом случае множество абстрактных состояний оказывается значительно меньше, чем множество конкретных состояний.
+В разделе 2.2 описан адаптивный статический анализ (англ. Configurable Program Analysis, CPA), который является формальной математической моделью некоторого статического анализа программы.
+CPA определяется доменом абстрактных переходов и операторами над этими абстрактными переходами: оператором перехода $transfer$, оператором объединения $merge$ и оператором останова $stop$.
+Каждый из этих операторов должен удовлетворять некоторым условиям для обеспечения корректности.
+Одним из важных отличий данного определения от классического варианта теории является использование абстрактных переходов вместо абстрактных состояний.
+Это необходимо для возможности построения абстракции не только над конкретными состояниями, но и над конкретными дугами, то есть операциями программы.
+Еще одним важным отличием данного определения является ослабление условия на оператор $transfer$, что позволяет определять более сложные CPA.
+
+В разделе 2.3 представлен алгоритм вычисления множества достижимых переходов с помощью некоторого CPA.
+Одним из важных особенностей предложенного обобщенного алгоритма является то, что его абстрактные переходы являются частичными, то есть множество конкретных переходов программы, соответствующее некоторому частичному абстрактному переходу, может зависить не только от этого перехода, но и от других частичных переходов. 
+
+Сам алгоритм остается практически неизменным по сравнению с классическим вариантом, за исключением небольшого изменения оператора $transfer$, что является необходимым для обеспечения возможности рассмотрения переходов из любого множества абстрактных состояний. 
+Основное отличие возникает при доказательстве корректности этого алгоритма, то есть, утверждения о том, что построенное множество абстрактных переходов аппроксимирует сверху множество конкретных переходов.
+Доказательство этой теоремы приведено в приложении.
  
-Одним из важных особенностей предложенного обобщенного алгоритма является то, что его абстрактные состояния являются частичными, то есть множество конкретных состояний программы, соответствующее некоторому частичному абстрактному состоянию, может зависить не только от этого состояния, но и от других частичных состояний. 
-Этот алгоритм оперирует адаптивным статическим анализом (англ., configurable program analysis, CPA), который задается следующими операторами: $transfer$, $prec$, $merge$, $stop$, $update$, $frontier$.
-Для того чтобы обеспечить корректность работы алгоритма, каждый из этих операторов должен удовлетворять определенным условиям.
+В разделе 2.4 представлен CPA, реализующий функциональность подхода с раздельным анализом потоков.
+Этот CPA выполняет не только обычные переходы (т.н. \textit{переходы в потоке}), но и строит специальные \textit{переходы в окружении}, которые представляют собой влияние потоков друг на друга.
+Для этого базовый набор операторов CPA расширяется еще тремя: оператором проекции $\cdot|_p$, оператором составления перехода $compose$ и оператором проверки совместности $compatible$.
 
-Алгоритм с частичными состояниями является расширением классического алгоритма, используемого в теории CPA, который рассматривает переходы только из каждого абстрактного состояния по-отдельности.
-Основным отличием расширенного алгоритма с частичными состояниями является возможность рассмотрения переходов из любого множества абстрактных состояний. 
-Это позволяет наложить более слабые условия на операторы анализа, чем этого требует оригинальный алгоритм.
-Новые слабые условия позволяют применять более эффективные техники анализа, чем это было раньше.
-После этого доказывается основная теорема, которая позволяет гарантировать корректость анализа, если его операторы удовлетворяют поставленным условиям.
+Переходы в окружении моделируют изменение состояния отдельного потока в результате действий другого потока.
+Для построения окружения используется оператор проекции, который представляет как выглядит тот или иной переход для другого потока.
+Таким образом, если переход не модифицирует разделяемые данные, его проекцией будет тождественный переход, означающий, что он не может повлиять на состояния других потоков.
+Каждая полученная проекция должна быть применена к каждому переходу потока, если это возможно.
+Возможность применения задает оператор $compatible$, который, по сути, проверяет могут ли проекция и переход в потоке выполняться параллельно. 
+Обычно, эта проверка означает то, что два частичных состояния могут соответствовать одному конкретному состоянию.
+В частности, отсюда следует, что все значения разделяемых данных должны совпадать.
 
-В разделе 3 представлен алгоритм с раздельным анализом потоков, который позволяет применять различные техники анализа программы (CPA).
-Этот алгоритм является частным случаем общего алгоритма, и оперирует двумя типами объектов: абстрактными состояниями и некоторыми вспомогательными объектами, которые далее будут называться эффектами окружения.
-Из абстрактного состояния возможны как обычные переходы на основании операторов программы, так и переходы "по окружению", которые описываются эффектами окружения.
-Переходы "по окружению" моделируют изменение состояния отдельного потока в результате действий другого потока.
-Для этого алгоритма описаны условия на его операторы $transfer$, $prec$, $merge$, $stop$, а также представлен общий вид операторов $update$, $frontier$, которые не зависят от используемых CPA.
-Кроме того, вводится новый оператор $compatible$, который определяет возможность применения перехода "по окружению" к текущему состоянию.
-Для каждого оператора показано соответствие поставленных условий тем, которые требуются общим алгоритмом.
-После этого определены дополнительные условия на оператор $transfer$ и представлены доказательства корректности этих условий.
+Кроме того, в разделе рассмотрен предельный случай CPA, который является инвариантным к переходам в окружении.
+Такое свойство позволяет значительно повысить скорость анализа за счет применения более эффективных оптимизаций.
 
-Также в этом разделе представлен частный случай алгоритма, который использует анализы, состояния которых инвариантны к преобразованиям окружения.
-Важным следствием для такого алгоритма является то, что переходы "по окружению" могут быть опущены, так как они не могут изменить абстрактное состояние анализа.
-Это позволяет значительно повысить скорость анализа, однако снижает точность, так как теряется точная информации о том, какие именно действия могут совершить другие активные потоки и приходится учитывать любой вариант их действия.
+В разделе 2.5 показано, как классический вариант подхода с раздельным рассмотрением потоков без абстракции может быть выражен с использованием предложенной теории. 
+Это демонстрирует ее выразительность.
 
-В разделе 4 представлены описания различных CPA, которые могут быть использованы совместно друг с другом.
-\begin{itemize}
-\item LocationCPA. Этот служебный анализ отвечает за правильную последовательность применения операторов программы. 
-\item PredicateCPA. Предикатный анализ позволяет строить предикатную абстракцию на основе некоторого множества предикатов. 
-Требуемые предикаты извлекаются автоматически с помощью процесса уточнения и запросов к внешнему компоненту -- решателю (англ. solver).
-\item ThreadCPA. Анализ потоков определяет какие из операций текущего потока могут выполняться параллельно с другими операциями других потоков.
-\item LockCPA. Анализ примитивов синхронизации позволяет определить те точки программы, которые защищены некоторыми примитивами синхронизации, что не позволяет выполнять параллельно эти участки кода.
-\end{itemize}
+В разделе 2.6 представлено формальное определение CompositeCPA, который обеспечивает композицию различных CPA между собой.
+Его домен представляет собой декартово произведение доменов внутренних CPA, а все операторы используют параллельную композицию соответствующих операторов внутренних CPA.
+Кроме того, CompositeCPA может усиливать переходы одних CPA за счет информации из других.
+Для этого служит специальный оператор $strengthen$.
+В данном случае, если некоторый CPA не может определить единственную CFA дугу для следующего перехода, данный CPA может подсказать ему, используя информацию о том, по какой дуге будут переходить следующие CPA.
+Такая реализация оператора $strengthen$ является достаточно тривиальной и в дальнейшем может быть усилена.
 
-Кроме того, описан служебный анализ CompositeCPA, позволяющий использовать несколько различных анализов вместе.
-Для каждого анализа представлено формальное определение всех его операторов и доказано, что эти операторы удовлетворяют поставленным условиям корректности.
+Разделы 2.7, 2.8, 2.9 посвящены описанию различных вариантов ThreadCPA, который отслеживает множество активных потоков.
+Простой его вариант может лишь отличить один поток от другого, но не может определить, может ли он выполняться параллельно, что приводит к снижению точности анализа.
+Вариант с использованием эффектов окружения позволяет учитывать зависимости по созданию потоков, а значит, позволяет вычислять совместные переходы более точно, однако не является инвариантным к переходам в окружении.
+Наконец, расширенный вариант ThreadCPA позволяет обеспечить необходимую точность анализа при сохранении инвариантности к переходам в окружении.
 
-\underline{\textbf{Третья глава}} посвящена описанию реализации разработанного метода поиска состояний гонки. Далее будем называть инструмент, реализующий предложенный метод, CPALockator. В этой же главе представлены решения, которые используются для эффективного анализа программного обеспечения.
+Раздел 2.10 представляет формальную модель LocationCPA, который отвечает за синтаксическую достижимость точек программы.
+Данный CPA обеспечивает связь с исходным кодом программы, а также за определение следующих переходов, которые задаются CFA дугами.
 
-В разделе 1 представлена общая архитектура инструмента, описаны используемые компоненты: анализ разделяемых данных, который используется как предварительный анализ и основной анализ, основанный на комбинации LockCPA, ThreadCPA и PredicateCPA.
-Кроме того в этом разделе представлены описания служебных CPA, которые используются  для оптимизации работы всего инструмента: BAMCPA и UsageCPA.
-BAMCPA обеспечивает модульный анализ по функциям, то есть результаты анализа функции могут быть переиспользованы в дальнейшем, если эта функция встретится еще раз.
-UsageCPA определяет и сохраняет информацию о доступах к памяти, сортируя их, и обеспечивает эффективный доступ к ним.
+Раздел 2.11 посвящен описанию PredicateCPA, который реализует анализ предикатов в случае подхода с раздельным рассмотрением потоков.
+Кроме ожидаемых изменений, связанных с дополнительными операторами, и поддержки переходов в окружении, было необходимо обеспечить возможность анализа нескольких потоков, исполняющих одну функцию. 
+Это значит, что при переходах в окружении необходимо переименовывать все встречающиеся локальные переменные для избежания коллизии имен.
 
-Конфигурация инструмента CPALockator позволяет настраивать инструмент для конкретного исходного кода.
-Например, можно определить функции выделения памяти, что означает, что выделенная ими память является точно локальной.
-Также имеется возможность аннотировать различные функции, которые могут вызвать сложности у инструмента, например, функции работы со списками.
-В этом случае доступ к отдельным служебным полям, например, $next$, будет считаться, как доступ ко всему списку.
+Раздел 2.12 представляет описание LockCPA, который отслеживает множество испльзуемых примитивов синхронизации.
+Данный CPA является инвариантным к переходам в окружении, и его проекции служат лишь для повышения точности оператора $compatible$, так как два перехода не могут выполняться параллельно друг с другом, если был захвачен одна и та же блокировка.
 
-В разделе 2 описаны структуры данных, которые используются для оптимизации работы с большим множеством доступов к памяти, которые были обнаружены в программе.
-Здесь описаны используемые контейнеры, которые накапливают в себе информацию о доступах к памяти в процессе анализа: локальные контейнеры, контейнеры для отдельных функций и глобальный контейнер, который содержит в себе полное множество информации.
-Также описано устройство структуры данных, используемой при уточнении результатов, которое позволяет применять эффективную навигацию по множеству всех доступов к памяти.
+Раздел 2.13 описывает очень простой анализ явных значений ValueCPA, который может отслеживать лишь присваивания явных значений в переменные.
+Он является простым анализом по сравнению с анализом предикатов.
 
-В разделе 3 описан процесс уточнения полученных результатов.
+В разделе 2.14 представлен основной метод поиска состояний гонки. 
+Он основан на алгоритме Lockset, который определяет состояние гонки, как ситуацию, при которой происходит параллельный доступ к разделяемой памяти с непересекающимся множеством блокировок.
+Предложенный метод использует оператор $compatible$ и определяет состояние гонки, как пару \textit{совместных} переходов, которые производят параллельный доступ к разделяемой памяти.
+Такой метод сводится к алгоритму Lockset при использовании только LockCPA, однако при анализе реальных программ обычно применяются несколько различных CPA совместно, что позволяет повысить точность определения состояний гонки по сравнению с классическим алгоритмом Lockset.
+
+\underline{\textbf{Третья глава}} посвящена описанию реализации разработанного метода поиска состояний гонки.
+Далее будем называть инструмент, реализующий предложенный метод, CPALockator.
+В этой же главе представлены решения, которые используются для эффективного анализа программного обеспечения.
+
+В разделе 3.1 представлена общее устройство инфраструктуры CPAchecker: используемый парсер, набор различных алгоритмов и CPA, а также автоматный способ задания ошибки.
+
+В разделе 3.2 описана конфигурация и типовой набор CPA, которые включаются в инструмент CPALockator.
+Обычно используются следующие CPA: ThreadModularCPA, ARGCPA, CompositeCPA, LocationCPA, CallstackCPA, LockCPA, ThreadCPA, PredicateCPA.
+Однако, такая конфигурация не является единственно возможной, и, в зависимости от целевой задачи, возможно исключение или добавление других CPA.
+
+Раздел 3.3 представляет основные оптимизации, сделанные при реализации ThreadModularCPA. 
+Основная оптимизация заключается в переходе от операций над переходами в окружении к операциям над проекциями, которых значительно меньше.
+А уже после операций $merge$ и $stop$ над проекциями вычисляются переходы в окружении.
+
+Раздел 3.4 описывает одну из важных оптимизаций BAMCPA, которая основана на кэшировании результатов проведенного анализа некоторого абстрактного блока.
+Такая оптимизация существенно позволяет ускорить анализ программы, однако в данный момент она не позволяет использовать CPA, которые не являются инвариантными к переходам в окружении.
+Данное ограничение является техническим, и в дальнейшем возможна реализация данной оптимизации в общем варианте.
+
+Раздел 3.5 описывает служебный ARG CPA, который обеспечивает построение абстрактного графа достижимости (англ. Abstract Reachability Graph, ARG).
+Абстрактные переходы данного CPA содержат в себе связи, соответсвующие операторам.
+Например, связи parent-child означает, что дочерний переход был получен из родительского с помощью оператора $transfer$.
+
+Раздел 3.6 представляет основные отличия реализации LockCPA от формально описанной модели. 
+Так как в реальных программах блокировки часто используются по указателю, то одним из основных отличий реализации от теории является поддержка возможности работы с указателями.
+Использование анализа алиасов является неоправданным для сложного программного обеспечения, поэтому делается предположение, что работа с блокировками ведется одинаковым образом, и если одна блокировка была захвачена по одному указателю, то она будет освобождаться с использованием этого же указателя.
+Еще одной возможностью стала поддержка расширенныго множества операций над блокировками, в том числе рекурсивный захват.
+Также в этом разделе описаны особенности реализации, связанные с оптимизацией BAM.
+
+В разделе 3.7 описаны основные особенности реализации LockationCPA, которые заключаются, в основном, в представлении различных служебных дуг, необходимость в которых появилась только для реализации подхода с раздельным рассмотрением потоков.
+
+Раздел 3.8 представляет описание реализации ThreadCPA.
+Основным отличием реализации является отсутствие идентификаторов потока на практике. 
+Одним из вариантов решения данной проблемы является использование в качестве идентификаторов имя переменной-описателя потока, однако она может быть переприсвоена даже при активном потоке, что является нетипичной ситуацией, однако не является ошибкой.
+Другое важное ограничение заключается в ограниченной поддержке операций типа $thread\_join$, которые не были описаны в теории.
+
+Раздел 3.9 посвящен реализации PredicateCPA.
+Анализ предикатов традиционно является самым медленным, то есть именно его операторы тратят большую часть времени анализа программы по сравнению с операторами других CPA.
+Поэтому задача повышения его эффективности становится очень актуальной.
+В разделе описаны используемые оптимизации, которые используются для повышения скорости анализа различными способами.
+
+Одной из важных оптимизаций является настраиваемое кодирование блоков, которое позволяет сократить количество пересчетов абстракции. 
+Однако, подход с раздельным рассмотрением потоков накладывает определенные ограничения на применение этой оптимизации.
+Другим важным вопросом является представление эффектов окружения таким образом, чтобы можно было эффективно строить логические формулы, соответствующие примененному эффекту.
+Основной проблемой при этом является вычисление корректных SSA-индексов, которые должны соответствовать индексам в состоянии потока.
+
+Уточнение абстракции по контрпримерам также имеет некоторые особенности из-за подхода с раздельным анализом потоков.
+В первую очередь возникают проблемы при восстановлении глобального пути, а также при его представлении, так как эффект окружения может не описываться ни одной CFA дугой.
+Многие эти проблемы требуют радикального переосмысления механизма уточнение в фреймворке CPAchecker, поэтому не все они были решены в рамках данной работы.
+
+В разделе 3.10 описаны основные особенности реализации CompositeCPA, которые заключаются, в основном, в удобной комбинации CPA, которые реализуют подход с раздельным рассмотрением потоков, и тех, которые являются инвариантными к переходам в окружении, а значит, могут не предоставлять расширенное множество операторов. 
+Кроме того, в разделе описаны отличия при реализации оператора $strengthen$.
+
+В разделе 3.11 описан UsageCPA, который предоставляет дополнительные возможности для настройки инструмента на целевой код, а также для поиска высокоуровневых гонок с помощью аннотаций.
+
+Раздел 3.12 посвящен еще одной важной оптимизации -- анализу разделяемых данных, который применяется непосредственно перед основным анализом для поиска разделяемых данных.
+Так, если какая-то область памяти не является разделяемой, то для нее не будут выданы предупреждения в дальнейшем.
+Анализ является консервативным, то есть если не доказано, что какая-то область памяти является локальной, то считается, что она может быть разделяемой.
+
+В разделе 3.13 представлены основные особенности при вычислении состояний гонки при анализе реальных программ.
+Важным отличием является активное использование указателей, однако использование анализа алиасов является очень неэффективным.
+Кроме того, анализ алиасов требует явной инициализации каждого указателя. Поэтому для решения данной проблемы была использована специализированная модель памяти BnB, основанная на разделении памяти на непересекающиеся регионы по типам.
+Кроме того, каждое поле структуры, от которого не брался адрес выделяется в отдельный регион.
+Такая модель памяти позволяет достаточно точно вычислять потенциальные состояния гонки.
+
+Однако, сам процесс вычисления устроен сложным образом, так как необходимо сначала восстановить всю информацию о доступах к данным, потерянную из-за применения оптимизации BAM, а затем обеспечить эффективное хранение, поиск и модификацию этой информации.
+Для этого применяются различные оптимизации, связанные с выделением приоритетной информации и упорядочивании ее. 
+
+Раздел 3.14 содержит описание процесса уточнения при поиске состояния гонки.
 Так как полученная абстракция программы может является аппроксимацией сверху множества состояний программы, возможны ситуации, при которых некоторые важные детали не будут учтены. 
 Это приведет к тому, что будет выдано ложное сообщение об ошибке. 
 Процесс уточнения позволяет повысить степень уверенности в том, что найденная ошибка является истинной.
 Например, может быть проверена локальная достижимость каждого из путей, участвующих в состоянии гонки.
 Этот процесс требует достаточно большого количества ресурсов, однако может быть прерван в любой момент.
 
-В разделе 4 представлено описание формата результатов, которое основано на формате witness, уже применяющегося в других инструментах статической верификации.
+Основным отличием от классического варианта является то, состояние гонки определяется парой доступов, соответственно, возникает необходимость уточнения пары путей.
+Кроме того, так как процесс уточнения запускается после полного построения абстракции, имеется большой выбор состояний для уточнения, а уточнение всех путей подряд приведет к большому количеству однообразных предикатов.
+Для решения этой проблемы используются различные эвристики для определения значимости уточнения каждого конкретного пути.
+
+В разделу 3.15 представлено описание формата визуализации результатов.
+Для визуализации используется формат GraphML, который уже применяется в других инструментах статической верификации.
 В этом разделе описан механизм построения трассы, приводящей к состоянию гонки, а также показана возможность их визуализации.
 
 %Можно сослаться на свои работы в автореферате. Для этого в файле
@@ -161,16 +241,67 @@ UsageCPA определяет и сохраняет информацию о до
 %}{}
 
 В \underline{\textbf{четвертой главе}} приведены результаты экспериментов.
-Результаты демонстрируют возможности инструмента CPALockator по его гибкой настройки.
-В качестве набора небольших программ был выбран открытый тестовый набор sv-comp, на нем CPALockator показал достаточно точные результаты. 
-Было получено некоторое количество ложных предупреждений об ошибке, но ни одной реальной ошибки не было пропущено, что подтверждает корректность разработанного метода.
-При этом, конечно, другие методы статической верификации способны выдавать меньшее количество ложных предупреждений на таком наборе небольших рукописных программ.
-Для проверки масштабируемости инструмента были выбраны несколько модулей операционной системы Linux с заранее известными ошибками.
-Более половины из этих ошибок были успешно обнаружены инструментами, при этом в оставшихся случаях верификация завершилась из-за нехватки вычислительных ресурсов.
-Если снизить еще снизить требования к точности, все реальные ошибки успешно обнаруживаются, хотя при этом появляется некоторое количество ложных предупреждений.
+Сравнение проводилось на множестве задач SV-COMP, множестве задач, подготовленных на основе подсистемы \textit{drivers/net} ОС Linux, а также двух ядрах закрытых операционных систем реального времени.
 
-Гибкая настройка требований к ресурсам позволяет использовать инструмент для проверки достаточно больших программных систем, содержащих сотни тысяч строк кода и проводить их анализ за минуты.
-При необходимости для каждой конкретной задачи можно выбрать свой баланс между качеством и требуемыми ресурсами, в зависимости от поставленной цели. 
+В разделе 4.1 описана общая схема проведения экспериментов, описаны использованные задачи, конфигурации и машины, на которых производился запуск.
+
+В разделе 4.2 представлены результаты сравнения различных инструментов верификации: CPALockator и участников соревнования SV-COMP.
+Основные выводы заключаются в том, что CPALockator продемонстрировал эффективную работу, однако его точность значительно ниже, чем у других инструментов.
+Однако, никто из них не решил те несколько примеров, которые основаны на драйверах ОС Linux, кроме CPALockator.
+Таким образом, можно заключить, что CPALockator экспериментально подтверждает то, что он не пропускает ошибок, а также то, что он эффективно решает сложные задачи.
+
+В разделе 4.3 представлены результаты сравнения различных вариантов реализации PredicateCPA: различные варианты оператора $merge$, а также использование оптимизаций.
+Результаты показывают, что использование оператора $merge_{Join}$ является предпочтительным для большинства задач.
+Среди оптимизаций стоит выделить оптимизацию ABE, которая улучшает эффективность анализа любого исходного кода.
+Некоторые другие оптимизации имеет смысл применять при анализе системного программного кода, в то время как на искусственных тестах SV-COMP они значительно ухудшают показатели.
+Другие оптимизации позволяют значительно ускорить анализ, однако приводят к появлению ложных сообщений об ошибках.
+
+В разделе 4.4 представлены результаты сравнения различных вариантов реализации ThreadCPA.
+Эксперименты подтверждают, что расширенный вариант ThreadCPA, инвариантный к переходам в окружении, способен обеспечить сопоставимую точность с вариантом с эффектами окружения.
+Тем не менее, простой анализ потоков является достаточным для тех случаев, в которых создание потоков производится искусственным образом в модели окружения.
+
+Различные варианты обработки повторно создаваемого потока также демонстрируют различные результаты в зависимости от целевого исходного кода.
+Например, при анализе исходного кода ОС РВ все три способа показывают похожие результаты, в то время как на наборе SV-COMP они проявляют себя совершенно по-разному. 
+
+Общий вывод по результатам заключается в том, что по возможности нужно использовать простой вариант ThreadCPA, который является корректным при некоторых дополнительных предположениях.
+Однако, если есть сомнения в выполнении данных предположений для конкретного исходного кода, тогда следует использовать тот вариант, который гарантирует корректность.
+
+В разделе 4.5 приведено сравнение различных вариантов реализации LockCPA.
+Сравнение различных вариантов реализации оператора $merge$ не выявило существенных отличий ни на каком наборе задач.
+Это демонстрирует невысокую актуальность данного варианта.
+Различные варианты оптимизации BAM показывают свою эффективность только на большом объеме исходного кода, однако в этом случае становятся принципиально важными.
+Использование уточнения, наоборот, снижает эффективность анализа на любом тестовом наборе, что подтверждает предположение, что затраты на уточнение не перекрывают выгоду от менее точной начальной абстракции.
+
+В разделе 4.6 рассмотрено сравнение вклада в точность и эффективность анализа дополнительных CPA.
+Оптимизация BAM в данный момент ограничена только CPA, инвариантными к переходам в окружении.
+Результаты демонстрируют ее высокую эффективность, кроме того большие объемы исходного кода могут быть проанализированы только с ее помощью.
+
+Применение анализа разделяемых данных имеет смысл только для решения задачи поиска состояния гонки.
+\todo{Результаты на драйверах}
+Результаты на ОС РВ демонстрируют высокую полезность анализа.
+
+Анализ предикатов обеспечивает высокую точность, однако для получения легковесного варианта инструмента его можно исключить из конфигурации, это приведет к значительному повышению скорости анализа за счет снижения точности.
+
+
+В разделе 4.7 представлены результаты поиска известных ошибок в драйверах ОС Linux.
+\todo{результаты}
+
+В разделе 4.8 приведены результаты анализа основных причин ложных срабатываний инструмента.
+\todo{результаты}
+
+В разделе 4.9 сформулированы основные выводы по результатам всех экспериментов: основные сценарии использования различных конфигураций и оптимизаций в зависимости от целевого исходного кода.
+Кроме того, показаны основные проблемные места на основе анализа причин ложных срабатываний и результатов поиска известных ошибок.
+
+%Результаты демонстрируют возможности инструмента CPALockator по его гибкой настройки.
+%В качестве набора небольших программ был выбран открытый тестовый набор sv-comp, на нем CPALockator показал достаточно точные результаты. 
+%Было получено некоторое количество ложных предупреждений об ошибке, но ни одной реальной ошибки не было пропущено, что подтверждает корректность разработанного метода.
+%При этом, конечно, другие методы статической верификации способны выдавать меньшее количество ложных предупреждений на таком наборе небольших рукописных программ.
+%Для проверки масштабируемости инструмента были выбраны несколько модулей операционной системы Linux с заранее известными ошибками.
+%Более половины из этих ошибок были успешно обнаружены инструментами, при этом в оставшихся случаях верификация завершилась из-за нехватки вычислительных ресурсов.
+%Если снизить еще снизить требования к точности, все реальные ошибки успешно обнаруживаются, хотя при этом появляется некоторое количество ложных предупреждений.
+%
+%Гибкая настройка требований к ресурсам позволяет использовать инструмент для проверки достаточно больших программных систем, содержащих сотни тысяч строк кода и проводить их анализ за минуты.
+%При необходимости для каждой конкретной задачи можно выбрать свой баланс между качеством и требуемыми ресурсами, в зависимости от поставленной цели. 
 
 В \underline{\textbf{заключении}} приведены основные результаты работы, которые заключаются в следующем:
 \input{common/concl}
