--- a/biblio/authorpapersVAK.bib
+++ b/biblio/authorpapersVAK.bib
@@ -37,3 +37,15 @@
   url={https://doi.org/10.1007/978-3-319-71734-0_2},
   language = {english}
 }
+
+
+@ARTICLE{theoryVAK,
+  author = {Андрианов П.С.},
+  title = {Анализ корректности синхронизации компонентов ядра операционных систем},
+  journal = {Труды Института системного программирования РАН},
+  year = {2019},
+  volume = {5},
+  number = {31},
+  pages = {203--232},
+  language = {russian},
+}
