--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -160,8 +160,8 @@ Phobos~\cite{Leveson:1995}.
 
 % {\contribution} Автор принимал активное участие \ldots
 
-\publications\ Основные результаты по теме диссертации изложены в 5 печатных изданиях~\cite{lockatorVAK,lockatorVAK2,TMPA2017,lockatorSyrcose,lockatorTMPA}, 
-    3 из которых изданы в журналах, рекомендованных ВАК~\cite{lockatorVAK,lockatorVAK2,TMPA2017}, из них 1 находится в базе Scopus~\cite{TMPA2017},
+\publications\ Основные результаты по теме диссертации изложены в 6 печатных изданиях~\cite{lockatorVAK,lockatorVAK2,TMPA2017,theoryVAK,lockatorSyrcose,lockatorTMPA}, 
+    4 из которых изданы в журналах, рекомендованных ВАК~\cite{lockatorVAK,lockatorVAK2,TMPA2017,theoryVAK}, из них 1 находится в базе Scopus~\cite{TMPA2017},
     2 "--- в тезисах докладов~\cite{lockatorSyrcose,lockatorTMPA}.
 
 В статье~\cite{lockatorVAK} автором описана основная идея метода (глава 3) и его реализация (глава 5).
