--- a/common/concl.tex
+++ b/common/concl.tex
@@ -1,6 +1,7 @@
 %% Согласно ГОСТ Р 7.0.11-2011:
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
+
 \begin{enumerate}
   \item Был разработан общий алгоритм анализа, позволяющий объединить в себе как классический алгоритм CPA, так и алгоритм с раздельным анализом потоков;
   \item Была доказана теорема, позволяющая гарантировать корректность работы алгоритма;
@@ -9,3 +10,17 @@
   \item Была доказана корректность предложенного метода поиска состояний гонки, который позволяет гибко балансировать точность и скорость анализа;
   \item Были проведены эксперименты, которые показали высокую степень гибкости разработанного метода.
 \end{enumerate}
+
+Эксперименты показали преимущества подхода на больших верификационных задачах перед существующими техниками статической верификации.
+Небольшие задачи со сложным взаимодействием потоков лучше решаются другими инструментами, так как предложенный подход абстрагируется от такого взаимодействия.
+Однако разработанный подход также не пропускает ошибок (при некоторых предположениях) и может быть развит в будущем.
+
+Таким образом, можно заключить, что основные требования к новому инструменту были выполнены, так как он успешно применяется к различным программным системам, в том числе, к драйверам ОС Linux и ядрам ОС реального времени.
+Также как и в классических методах статической верификации, может быть получена гарантия отсутствия ошибок при выполнении указанных предположений: требований на операторы CPA и условий корректного разбиения на непересекающиеся регионы BnB модели.
+Предложенная общая теория позволяет описывать достаточно сложные варианты анализа, в том числе и те, которые не включаются в понятие анализа с раздельным рассмотрением потоков.
+Тем не менее, эта теория не исчерпывает всех возможных подходов, и для эффективного описания масштабируемого подхода с частичным вычислением чередований потребуется ее расширение. Однако, эта тема выходит за рамки данной работы.
+Одним из возможных направлений развития подхода является добавление взаимодействия потоков, возможно, не в полном объеме, чтобы сохранить масштабируемость.
+Это может быть отдельный анализ CPA, который будет динамически настраивать свою точность с помощью алгоритма CEGAR, обеспечивая некоторый промежуточный вариант между подходом с раздельным анализом потоков и перебором чередований.
+Другим возможным улучшением инструмента может стать интеграция его с другим подходом. 
+Например, комбинация быстрого подхода с раздельным анализом потоков в качестве первого этапа, а затем классический тяжеловесный анализ – на втором этапе. Это может быть реализовано в соответствии с идеей кооперативной верификации.
+Еще одним возможным направлением развития подхода является построение реального пути с чередованием потоков на основе пути с примененными эффектами окружения. Этот путь был бы полезен для исследования и уточнения абстракции. 
