--- a/Dissertation/appendix.tex
+++ b/Dissertation/appendix.tex
@@ -996,122 +996,238 @@ l_{\nu}
 
 \end{proof}
 
+
+\section{Доказательство условия~\ref{cpa_transfer_composite_req} для расширенного ThreadCPA, инвариантного к эффектам окружения}
+\label{sect_transfer_thread_ext_proof}
+
+Нам нужно доказать, что определенные в разделе~\ref{sect_thread_analysis_ext} операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
+
+\begin{proof}
+Рассмотрим случайный конкретный переход $\tau = (c, g, t_0)$, $g=(\cdot, op, \cdot)$:
+$$\tau \in  \epp_{T}
+\left(
+\begin{pmatrix}
+e_0 \\
+t_0 
+\end{pmatrix},
+\left\{
+\begin{pmatrix}
+e_1 \\
+t_1 
+\end{pmatrix},
+\dots ,
+\begin{pmatrix}
+e_m \\
+t_m 
+\end{pmatrix}
+\right\}
+\right)$$.
+
+Если $op \neq thread\_create$, по определению $transfer$ $e'_i = (s_i, \top^T_T)$, то есть состояние не изменяется, а переходы рассматриваются все возможные. 
+Таким образом, 
+$$с' \in  \epp^S_{T}
+\left(
+\begin{pmatrix}
+s_0 \\
+t_0 
+\end{pmatrix},
+\left\{
+\begin{pmatrix}
+s_1 \\
+t_1 
+\end{pmatrix},
+\dots ,
+\begin{pmatrix}
+s_m \\
+t_m 
+\end{pmatrix}
+\right\}
+\right) = \epp^S_{T}
+\left(
+\begin{pmatrix}
+s'_0 \\
+t_0 
+\end{pmatrix},
+\left\{
+\begin{pmatrix}
+s'_1 \\
+t_1 
+\end{pmatrix},
+\dots ,
+\begin{pmatrix}
+s'_m \\
+t_m 
+\end{pmatrix}
+\right\}
+\right)$$
+А значит, $\tau' = (c', g', t_k)$:
+$$\tau'  \in \epp_{T}
+\left(
+\begin{pmatrix}
+e'_k \\
+t_k 
+\end{pmatrix},
+\left\{
+\begin{pmatrix}
+e'_0 \\
+t_0 
+\end{pmatrix},
+\dots ,
+\begin{pmatrix}
+e'_m \\
+t_m 
+\end{pmatrix}
+\right\}
+\right)$$
+
+Рассмотрим теперь случай $op = thread\_create(l_{\nu})$.
+При обычном переходе меняются состояния нулевого потока: $C'_0 = C_0 \cup \{l_{\nu}\}$, и появляется новый переход, соответствующий созданному потоку: $e_{m+1} = ((l_{\nu},C_0 \cup \{l_{\nu}\}) , \top^T_T)$.
+
+По определению $\epp_T$ все остальные переходы в окружении должны были содержать в себе абстрактную дугу, которая соответсвует переходу в потоке, то есть $q_i = (create, l_{\nu})$.
+Таким образом, $\forall 1 \le i \le m, C_i = C'_0$, то есть состояния остаются совместными, а значит, оператор $apply$ будет применим.
+Поэтому, 
+$$\tau' \in  \epp_{T}
+\left(
+\begin{pmatrix}
+e'_k \\
+t_k 
+\end{pmatrix},
+\left\{
+\begin{pmatrix}
+e'_0 \\
+t_0 
+\end{pmatrix},
+\dots ,
+\begin{pmatrix}
+e'_m \\
+t_m 
+\end{pmatrix} ,
+\begin{pmatrix}
+e'_{m+1} \\
+l_{\nu} 
+\end{pmatrix}
+\right\}
+\right)$$
+
+\end{proof}
+
+
 %_____________________
 
-Для крупных листингов есть два способа. Первый красивый, но в нём могут быть проблемы с поддержкой кириллицы (у вас может встречаться в комментариях и
-печатаемых сообщениях), он представлен на листинге~\ref{list:hwbeauty}.
-\begin{ListingEnv}[!h]% настройки floating аналогичны окружению figure
-    \captiondelim{ } % разделитель идентификатора с номером от наименования
-    \caption{Программа ,,Hello, world`` на \protect\cpp}
-    % далее метка для ссылки:
-    \label{list:hwbeauty}
-    % окружение учитывает пробелы и табуляции и применяет их в сответсвии с настройками
-    \begin{lstlisting}[language={[ISO]C++}]
-	#include <iostream>
-	using namespace std;
-
-	int main() //кириллица в комментариях при xelatex и lualatex имеет проблемы с пробелами
-	{
-		cout << "Hello, world" << endl; //latin letters in commentaries
-		system("pause");
-		return 0;
-	}
-    \end{lstlisting}
-\end{ListingEnv}%
-Второй не~такой красивый, но без ограничений (см.~листинг~\ref{list:hwplain}).
-\begin{ListingEnv}[!h]
-    \captiondelim{ } % разделитель идентификатора с номером от наименования
-    \caption{Программа ,,Hello, world`` без подсветки}
-    \label{list:hwplain}
-    \begin{Verb}
-        
-        #include <iostream>
-        using namespace std;
-        
-        int main() //кириллица в комментариях
-        {
-            cout << "Привет, мир" << endl;
-        }
-    \end{Verb}
-\end{ListingEnv}
-
-Можно использовать первый для вставки небольших фрагментов
-внутри текста, а второй для вставки полного
-кода в приложении, если таковое имеется.
-
-Если нужно вставить совсем короткий пример кода (одна или две строки),
-то~выделение  линейками и нумерация может смотреться чересчур громоздко.
-В таких случаях можно использовать окружения \texttt{lstlisting} или
-\texttt{Verb} без \texttt{ListingEnv}. Приведём такой пример
-с указанием языка программирования, отличного от~заданного по умолчанию:
-\begin{lstlisting}[language=Haskell]
-fibs = 0 : 1 : zipWith (+) fibs (tail fibs)
-\end{lstlisting}
-Такое решение~--- со вставкой нумерованных листингов покрупнее
-и вставок без выделения для маленьких фрагментов~--- выбрано,
-например, в книге Эндрю Таненбаума и Тодда Остина по архитектуре
-%компьютера~\autocite{TanAus2013} (см.~рис.~\ref{fig:tan-aus}).
-
-Наконец, для оформления идентификаторов внутри строк
-(функция \lstinline{main} и~тому подобное) используется
-\texttt{lstinline} или, самое простое, моноширинный текст
-(\texttt{\textbackslash texttt}).
-
-
-Пример~\ref{list:internal3}, иллюстрирующий подключение переопределённого языка. Может быть полезным, если подсветка кода работает криво. Без дополнительного окружения, с подписью и ссылкой, реализованной встроенным средством.
-\begingroup
-\captiondelim{ } % разделитель идентификатора с номером от наименования
-\begin{lstlisting}[language={Renhanced},caption={Пример листинга c подписью собственными средствами},label={list:internal3}]
-## Caching the Inverse of a Matrix
-
-## Matrix inversion is usually a costly computation and there may be some
-## benefit to caching the inverse of a matrix rather than compute it repeatedly
-## This is a pair of functions that cache the inverse of a matrix.
-
-## makeCacheMatrix creates a special "matrix" object that can cache its inverse
-
-makeCacheMatrix <- function(x = matrix()) {#кириллица в комментариях при xelatex и lualatex имеет проблемы с пробелами
-    i <- NULL
-    set <- function(y) {
-        x <<- y
-        i <<- NULL
-    }
-    get <- function() x
-    setSolved <- function(solve) i <<- solve
-    getSolved <- function() i
-    list(set = set, get = get,
-    setSolved = setSolved,
-    getSolved = getSolved)
-    
-}
-
-
-## cacheSolve computes the inverse of the special "matrix" returned by
-## makeCacheMatrix above. If the inverse has already been calculated (and the
-## matrix has not changed), then the cachesolve should retrieve the inverse from
-## the cache.
-
-cacheSolve <- function(x, ...) {
-    ## Return a matrix that is the inverse of 'x'
-    i <- x$getSolved()
-    if(!is.null(i)) {
-        message("getting cached data")
-        return(i)
-    }
-    data <- x$get()
-    i <- solve(data, ...)
-    x$setSolved(i)
-    i  
-}
-\end{lstlisting} %$ %Комментарий для корректной подсветки синтаксиса
-                 %вне листинга
-\endgroup
-
-Листинг~\ref{list:external1} подгружается из внешнего файла. Приходится загружать без окружения дополнительного. Иначе по страницам не переносится.
-\begingroup
-\captiondelim{ } % разделитель идентификатора с номером от наименования
-    \lstinputlisting[lastline=78,language={R},caption={Листинг из внешнего файла},label={list:external1}]{listings/run_analysis.R}
-\endgroup
+%Для крупных листингов есть два способа. Первый красивый, но в нём могут быть проблемы с поддержкой кириллицы (у вас может встречаться в комментариях и
+%печатаемых сообщениях), он представлен на листинге~\ref{list:hwbeauty}.
+%\begin{ListingEnv}[!h]% настройки floating аналогичны окружению figure
+%    \captiondelim{ } % разделитель идентификатора с номером от наименования
+%    \caption{Программа ,,Hello, world`` на \protect\cpp}
+%    % далее метка для ссылки:
+%    \label{list:hwbeauty}
+%    % окружение учитывает пробелы и табуляции и применяет их в сответсвии с настройками
+%    \begin{lstlisting}[language={[ISO]C++}]
+%	#include <iostream>
+%	using namespace std;
+%
+%	int main() //кириллица в комментариях при xelatex и lualatex имеет проблемы с пробелами
+%	{
+%		cout << "Hello, world" << endl; //latin letters in commentaries
+%		system("pause");
+%		return 0;
+%	}
+%    \end{lstlisting}
+%\end{ListingEnv}%
+%Второй не~такой красивый, но без ограничений (см.~листинг~\ref{list:hwplain}).
+%\begin{ListingEnv}[!h]
+%    \captiondelim{ } % разделитель идентификатора с номером от наименования
+%    \caption{Программа ,,Hello, world`` без подсветки}
+%    \label{list:hwplain}
+%    \begin{Verb}
+%        
+%        #include <iostream>
+%        using namespace std;
+%        
+%        int main() //кириллица в комментариях
+%        {
+%            cout << "Привет, мир" << endl;
+%        }
+%    \end{Verb}
+%\end{ListingEnv}
+%
+%Можно использовать первый для вставки небольших фрагментов
+%внутри текста, а второй для вставки полного
+%кода в приложении, если таковое имеется.
+%
+%Если нужно вставить совсем короткий пример кода (одна или две строки),
+%то~выделение  линейками и нумерация может смотреться чересчур громоздко.
+%В таких случаях можно использовать окружения \texttt{lstlisting} или
+%\texttt{Verb} без \texttt{ListingEnv}. Приведём такой пример
+%с указанием языка программирования, отличного от~заданного по умолчанию:
+%\begin{lstlisting}[language=Haskell]
+%fibs = 0 : 1 : zipWith (+) fibs (tail fibs)
+%\end{lstlisting}
+%Такое решение~--- со вставкой нумерованных листингов покрупнее
+%и вставок без выделения для маленьких фрагментов~--- выбрано,
+%например, в книге Эндрю Таненбаума и Тодда Остина по архитектуре
+%%компьютера~\autocite{TanAus2013} (см.~рис.~\ref{fig:tan-aus}).
+%
+%Наконец, для оформления идентификаторов внутри строк
+%(функция \lstinline{main} и~тому подобное) используется
+%\texttt{lstinline} или, самое простое, моноширинный текст
+%(\texttt{\textbackslash texttt}).
+%
+%
+%Пример~\ref{list:internal3}, иллюстрирующий подключение переопределённого языка. Может быть полезным, если подсветка кода работает криво. Без дополнительного окружения, с подписью и ссылкой, реализованной встроенным средством.
+%\begingroup
+%\captiondelim{ } % разделитель идентификатора с номером от наименования
+%\begin{lstlisting}[language={Renhanced},caption={Пример листинга c подписью собственными средствами},label={list:internal3}]
+%## Caching the Inverse of a Matrix
+%
+%## Matrix inversion is usually a costly computation and there may be some
+%## benefit to caching the inverse of a matrix rather than compute it repeatedly
+%## This is a pair of functions that cache the inverse of a matrix.
+%
+%## makeCacheMatrix creates a special "matrix" object that can cache its inverse
+%
+%makeCacheMatrix <- function(x = matrix()) {#кириллица в комментариях при xelatex и lualatex имеет проблемы с пробелами
+%    i <- NULL
+%    set <- function(y) {
+%        x <<- y
+%        i <<- NULL
+%    }
+%    get <- function() x
+%    setSolved <- function(solve) i <<- solve
+%    getSolved <- function() i
+%    list(set = set, get = get,
+%    setSolved = setSolved,
+%    getSolved = getSolved)
+%    
+%}
+%
+%
+%## cacheSolve computes the inverse of the special "matrix" returned by
+%## makeCacheMatrix above. If the inverse has already been calculated (and the
+%## matrix has not changed), then the cachesolve should retrieve the inverse from
+%## the cache.
+%
+%cacheSolve <- function(x, ...) {
+%    ## Return a matrix that is the inverse of 'x'
+%    i <- x$getSolved()
+%    if(!is.null(i)) {
+%        message("getting cached data")
+%        return(i)
+%    }
+%    data <- x$get()
+%    i <- solve(data, ...)
+%    x$setSolved(i)
+%    i  
+%}
+%\end{lstlisting} %$ %Комментарий для корректной подсветки синтаксиса
+%                 %вне листинга
+%\endgroup
+%
+%Листинг~\ref{list:external1} подгружается из внешнего файла. Приходится загружать без окружения дополнительного. Иначе по страницам не переносится.
+%\begingroup
+%\captiondelim{ } % разделитель идентификатора с номером от наименования
+%    \lstinputlisting[lastline=78,language={R},caption={Листинг из внешнего файла},label={list:external1}]{listings/run_analysis.R}
+%\endgroup
 
 %
 %\chapter{Очень длинное название второго приложения, в~котором продемонстрирована работа с~длинными таблицами} \label{AppendixB}
