--- a/Dissertation/conclusion.tex
+++ b/Dissertation/conclusion.tex
@@ -8,14 +8,13 @@
 
 Основные результаты работы заключаются в следующем.
 \input{common/concl}
-И какая-нибудь заключающая фраза.
+%И какая-нибудь заключающая фраза.
 
-Последний параграф может включать благодарности.  В заключение автор
+В заключение автор
 выражает благодарность и большую признательность научному руководителю
-Иванову~И.\:И. за поддержку, помощь, обсуждение результатов и научное
-руководство. Также автор благодарит Сидорова~А.\:А. и Петрова~Б.\:Б. за
-помощь в~работе с~образцами, Рабиновича~В.\:В. за предоставленные
-образцы и~обсуждение результатов, Занудятину~Г.\:Г.
+Хорошилову~А.\:В и Мутилину~В.\:С за поддержку, помощь, обсуждение результатов и научное
+руководство.
+Также автор благодарит Новикова~Е.\:М., Захарова~И.\:С и Щепеткова~И.\:В. за
+помощь в~работе и~обсуждение результатов.
 %  и авторов шаблона *Russian-Phd-LaTeX-Dissertation-Template* за помощь в оформлении диссертации.
- Автор также благодарит много разных людей и
-всех, кто сделал настоящую работу автора возможной.
+Автор также благодарит всех, кто сделал настоящую работу автора возможной.
