--- a/Dissertation/part_evaluation.tex
+++ b/Dissertation/part_evaluation.tex
@@ -91,6 +91,8 @@
 % \item Игнорирование предупреждений о состоянии гонки с пустым множеством блокировок.
 \end{itemize}
 
+\todo{Описать конфигурации, в том числе CPAchecker, CPAchecker-TM}
+
 %Было реализовано две основные модификации анализа с раздельным рассмотрением потоков с эффектами окружения
 %\begin{enumerate}
 %\item $\mathbb{C_1}(\mathbb{L}, \mathbb{CS}, \mathbb{T}, \mathbb{S}, \mathbb{P})$ -- включает анализ потоков, ограниченный количеством создаваемых потоков;
@@ -254,14 +256,14 @@ MergeJoin объединяет все эффекты в один и примен
     \begin{tabular}{ | l | c | c | c | }
       \hline
       Подход         				& MergeJoin	& MergeEq 	& MergeSep   \\ \hline
-      Вердикт "ошибка" 				& 24    	& 22  		& 18         \\ 
-  \hspace{0.5cm} из них корректных 	& 17 		& 17 		& 13      \\ 
-  \hspace{0.5cm} из них некорректных & 7 		& 5 		& 5        \\ \hline
-      Вердикт "нет ошибки"  		& 253      	& 253        & 253       \\ 
-  \hspace{0.5cm} из них корректных 	& 253 		& 253    	& 253        \\
+      Вердикт "ошибка" 				& 8	    	& 8  		& 5         \\ 
+  \hspace{0.5cm} из них корректных 	& 8 		& 8 		& 5      \\ 
+  \hspace{0.5cm} из них некорректных & 0 		& 0 		& 0        \\ \hline
+      Вердикт "нет ошибки"  		& 261      	& 260       & 259       \\ 
+  \hspace{0.5cm} из них корректных 	& 261 		& 260    	& 259        \\
   \hspace{0.5cm} из них некорректных & 0 		& 0    		& 0         \\ \hline
       Анализ не завершен       		& 148     	& 150        & 154       \\ \hline
-      Время CPU (с)   				& 122 000 	& 122 000    & 128 000    \\ 
+      Время CPU (с)   				& 139 000 	& 140 000    & 143 000    \\ 
       \hline
     \end{tabular}
   \end{table}
@@ -327,28 +329,27 @@ Havoc исключает разделяемые переменные еще на
 Однако, что и следовало ожидать, предположение, что все разделяемые данные могут принимать любые значения, не позволяет доказать корректность нескольких примеров, что увеличивает количество ложных предупреждений об ошибках.
 Положительным эффектом является обнаружение корректных ошибок в тех примерах, которые раньше приводили к исчерпанию времени в более точных конфигурациях.
 
-Результаты сравнения на множестве драйверов \textit{drivers/net/} представлены в таблицах~\ref{table-drivers-opt},~\ref{table-drivers-opt}.
+Результаты сравнения на множестве драйверов \textit{drivers/net/} представлены в таблицах~\ref{table-drivers-opt},~\ref{table-drivers-opt-2}.
 
   \begin{table}[h]\footnotesize \centering
     \caption{Сравнение на наборе задач \textit{drivers/net/}}
   	\label{table-drivers-opt}
-    \begin{tabular}{ | l | c | c | c | c | c | c |}
+    \begin{tabular}{ | l | c | c | c | c | c | c | c |}
       \hline
-      Подход         				& Base 		& Undef		& Relevance & ABE 		& Havoc   	\\ \hline
-      Вердикт "ошибка" 				& 12  		& 13   		& 13       	& 19   		& 15     	\\ 
-  \hspace{0.5cm} из них корректных 	& 9 		& 9 		& 9     	& 14   		& 10     	\\ 
-  \hspace{0.5cm} из них некорректных & 3 		& 4 		& 4     	& 5  		& 5      	\\ \hline
-      Вердикт "нет ошибки"  		& 253    	& 253    	& 253     	& 253   	& 253    	\\ 
-  \hspace{0.5cm} из них корректных 	& 253 		& 253    	& 253       & 253   	& 253    	\\
-  \hspace{0.5cm} из них некорректных & 0 		& 0    		& 0      	& 0   		& 0     	\\ \hline
-      Анализ не завершен       		& 160    	& 159    	& 159     	& 153   	& 157    	\\ \hline
-      Время CPU, с   				& 98 400 	& 98 400 	& 90 500  	& 73 900   	& 87 900    \\ 
+      Подход         				& Base 		& Undef		& Relevance & ABE 		& Havoc   	& Imprecise	\\ \hline
+      Вердикт "ошибка" 				& 5  		& 5   		& 5       	& 7   		& 18     	& 17		\\ 
+  \hspace{0.5cm} из них корректных 	& 5 		& 5 		& 5     	& 7   		& 14     	& 14 		\\ 
+  \hspace{0.5cm} из них некорректных & 0 		& 0 		& 0     	& 0  		& 4      	& 3 		\\ \hline
+      Вердикт "нет ошибки"  		& 259    	& 259    	& 259     	& 260   	& 255    	& 254		\\ 
+  \hspace{0.5cm} из них корректных 	& 259 		& 259    	& 259       & 260   	& 255    	& 254    	\\
+  \hspace{0.5cm} из них некорректных & 0 		& 0    		& 0      	& 0   		& 0     	& 0     	\\ \hline
+      Анализ не завершен       		& 161    	& 161    	& 161     	& 158   	& 152    	& 154    	\\ \hline
+      Время CPU, с   				& 113 000 	& 109 000 	& 109 000  	& 83 500   	& 88 200    & 102 000   \\ 
       \hline
     \end{tabular}
   \end{table}
 
-Интересное отличие от предыдущего пункта заключается в том, что оптимизация Undef практически ничего не дает: один вердикт был получен на границе лимита времени и может быть случайным переходов.
-Отличий по общему количеству затраченного времени практически нет.
+Интересное отличие от предыдущего пункта заключается в том, что оптимизация Undef практически ничего не дает.
 Это объясняется тем, что в драйверах ОС Linux очень редко встречается присваивание явных значений во внутренние структуры.
 В основном, это может быть инициализация, которая обычно происходит в начале работы в однопоточном режиме.
 А все штатные сценарии работы драйвера манипулируют внутренними данными, то есть, вычислить явное их значение при статическом анализе не удается. 
@@ -360,9 +361,6 @@ Havoc исключает разделяемые переменные еще на
 
 Для достаточно длинных ошибочных трасс оптимизация ABE вносит более весомый вклад, так как блоки получаются более длинные за счет большого количества работы с локальными данными, чего не было в искусственных примерах SV-COMP.
 Это позволяет даже получить несколько дополнительных вердиктов.
-
-\todo{Сделать общую таблицу!}
-\todo{Нужна таблица с CPALockator!}
 
   \begin{table}[h]\footnotesize \centering
     \caption{Сравнение оптимизаций на наборе задач \textit{drivers/net/}}
@@ -386,24 +384,63 @@ Havoc исключает разделяемые переменные еще на
 Тем не менее, стоит заметить, что ее точности хватает, чтобы доказать отсутствие ошибок у большого множества задач. 
 Таким образом, в некоторых случаях имеет смысл жертвовать точностью, отказываясь от точного рассмотрения разделяемых данных для того, чтобы получить новые вердикты.
 
-Результаты сравнения на ядрах ОС РВ представлены в таблице~\ref{table-os-opt}.
+%CPALockator:
 
   \begin{table}[h]\footnotesize \centering
-    \caption{Сравнение оптимизации ABE на ядрах ОС РВ}
-  	\label{table-os-opt}
-    \begin{tabular}{ | l | c | c | c | c |}
+    \caption{Сравнение оптимизаций на наборе задач \textit{drivers/net/}}
+  	\label{table-drivers-opt-2}
+    \begin{tabular}{ | l | c | c |}
       \hline
-      		& 		\multicolumn{2}{|c|}{ОС РВ 1} & \multicolumn{2}{|c|}{ОС РВ 2} \\
-      Подход         								& Base 	& ABE 	& Base 	& ABE 		\\ \hline
-      Число предупреждений 							& 507  	& 503   & 916   & 918  		\\ 
-      Общее время CPU, с							& 591  	& 611   & 485   & 496  		\\ 
-\hspace{0.5cm} Время на построение абстракции, с 	& 92 	& 48   	& 82 	& 48   	\\
+      Подход         				& Base		& ABE	  	\\ \hline
+      Вердикт "ошибка" 				& 19  		& 33   			\\ 
+  \hspace{0.5cm} из них корректных 	& 14 		& 25 		  	\\ 
+  \hspace{0.5cm} из них некорректных & 5 		& 8 		    \\ \hline
+      Вердикт "нет ошибки"  		& 254    	& 255    	    \\ 
+  \hspace{0.5cm} из них корректных 	& 254 		& 255    	  	\\
+  \hspace{0.5cm} из них некорректных & 0 		& 0    		   	\\ \hline
+      Анализ не завершен       		& 152    	& 137    	   	\\ \hline
+      Время CPU, с   				& 114 000 	& 93 400 	 	\\ 
       \hline
     \end{tabular}
   \end{table}
+  
+\todo{Вывод}
 
-\todo{Нужно сравнить и тот и другой запуск, странное отличие!}
-\todo{Нужно сравнение с уточнением!}
+Результаты сравнения на ядрах ОС РВ представлены в таблицах~\ref{table-os-opt-1},~\ref{table-os-opt-2}.
+
+  \begin{table}[h]\footnotesize \centering
+    \caption{Сравнение оптимизации ABE на ядрах ОС РВ}
+  	\label{table-os-opt-1}
+    \begin{tabular}{ | l | c | c | c | c |}
+      \hline
+      		& 		\multicolumn{2}{c|}{Без уточнения} & \multicolumn{2}{c|}{10 итераций уточнения}  \\
+      Подход         								& Base 	& ABE 	& Base 	& ABE 		\\ \hline
+      Число предупреждений 							& 521  	& 461   & --   	& --  		\\ 
+      Общее время CPU, с							& 586  	& 582   & 10000 & 10000  		\\ 
+\hspace{0.5cm} Время на построение абстракции, с 	& 87 	& 54   	& 87 	& 48   	\\
+\hspace{0.5cm} Время на уточнение, с 				& 0 	& 0   	& 8987 	& 8121   	\\
+      \hline
+    \end{tabular}
+  \end{table}
+  
+\todo{странное отличие на ABE!}
+  
+    \begin{table}[h]\footnotesize \centering
+    \caption{Сравнение оптимизации ABE на ядрах ОС РВ}
+  	\label{table-os-opt-2}
+    \begin{tabular}{ | l | c | c | c | c |}
+      \hline
+      		& 		\multicolumn{2}{c|}{Без уточнения} & \multicolumn{2}{c|}{10 итераций уточнения}  \\
+      Подход         								& Base 	& ABE 	& Base 	& ABE 		\\ \hline
+      Число предупреждений 							& 1037 	& 981   & --   	& 898  		\\ 
+      Общее время CPU, с							& 798  	& 886   & 10000 & 9881  		\\ 
+\hspace{0.5cm} Время на построение абстракции, с 	& 116 	& 71   	& 579 	& 1213   	\\
+\hspace{0.5cm} Время на уточнение, с 				& 0 	& 0   	& 6457 	& 782   	\\
+      \hline
+    \end{tabular}
+  \end{table}
+  
+
 
 \section{Сравнение различных вариантов реализации ThreadCPA}
 
@@ -425,46 +462,41 @@ Havoc исключает разделяемые переменные еще на
     \begin{tabular}{ | l | c | c | c | }
       \hline
       Подход         				& Simple   	& Env 		& Base  	\\ \hline
-      Вердикт "ошибка" 				& 988    	& 966       & 1028       \\ 
-  \hspace{0.5cm} из них корректных 	& 789 		& 785 		& 805    	\\ 
-  \hspace{0.5cm} из них некорректных & 199 		& 181 		& 223     	\\ \hline
-      Вердикт "нет ошибки"  		& 33      	& 24        & 21       	\\ 
-  \hspace{0.5cm} из них корректных 	& 33 		& 24    	& 21      	\\
+      Вердикт "ошибка" 				& 982    	& 966       & 1028       \\ 
+  \hspace{0.5cm} из них корректных 	& 793 		& 785 		& 805    	\\ 
+  \hspace{0.5cm} из них некорректных & 189 		& 181 		& 223     	\\ \hline
+      Вердикт "нет ошибки"  		& 9      	& 24        & 21       	\\ 
+  \hspace{0.5cm} из них корректных 	& 9 		& 24    	& 21      	\\
   \hspace{0.5cm} из них некорректных & 0 		& 0    		& 0     	\\ \hline
-      Анализ не завершен       		& 26     	& 92        & 33    	\\ \hline
-      Время CPU, с   				& 28 400 	& 23 800    & 25 600  	\\
+      Анализ не завершен       		& 91     	& 92        & 33    	\\ \hline
+      Время CPU, с   				& 28 300 	& 23 800    & 25 600  	\\
       \hline
     \end{tabular}
   \end{table}
-
-\todo{Уточнить Simple!}
 
 % Много падений в Env из-за counterexample could not be ruled out...
 
 Результаты сравнения на наборе \textit{drivers/net/} представлены в таблице~\ref{table-drivers-thread}.
 
-\begin{center}
   \begin{table}[h]\footnotesize \centering
   	\label{table-drivers-thread}
     \caption{Сравнение  на наборе \textit{drivers/net/}}
     \begin{tabular}{ | l | c | c | c | c | c |}
       \hline
-      					& \multicolumn{3}{|c|}{CPALockator-TM} 			& \multicolumn{2}{|c|}{CPALockator} 	\\
+      					& \multicolumn{3}{c|}{CPALockator-TM} 			& \multicolumn{2}{c|}{CPALockator} 	\\
       Подход         				& Simple 	& Env 		& Base 		& Simple 	& Base  	\\ \hline
-      Вердикт "ошибка" 				& 138    	& 30   		& 31   		& 36        & 36  	 	\\ 
-  \hspace{0.5cm} из них корректных 	& 22 		& 22 		& 23   		& 28       	& 28   		\\ 
-  \hspace{0.5cm} из них некорректных & 116 		& 8 		& 8   		& 8       	& 8     	\\ \hline
-      Вердикт "нет ошибки"  		& 144      	& 253    	& 253    	& 256      	& 255     	\\ 
-  \hspace{0.5cm} из них корректных 	& 144 		& 253    	& 253    	& 256       & 255   	\\
+      Вердикт "ошибка" 				& 122    	& 10   		& 11   		& 36        & 36  	 	\\ 
+  \hspace{0.5cm} из них корректных 	& 12 		& 10 		& 11   		& 28       	& 28   		\\ 
+  \hspace{0.5cm} из них некорректных & 110 		& 0 		& 0   		& 8       	& 8     	\\ \hline
+      Вердикт "нет ошибки"  		& 150      	& 262    	& 262    	& 256      	& 255     	\\ 
+  \hspace{0.5cm} из них корректных 	& 150 		& 262    	& 262    	& 256       & 255   	\\
   \hspace{0.5cm} из них некорректных & 0 		& 0    		& 0     	& 0         & 0   		\\ \hline
-      Анализ не завершен       		& 282     	& 142    	& 141    	& 133      	& 134   	\\ \hline
-      Время CPU, с   				& 122 000 	& 120 000 	& 120 000 	& 110 000  	& 110 000   \\ 
+      Анализ не завершен       		& 153     	& 153    	& 152    	& 133      	& 134   	\\ \hline
+      Время CPU, с   				& 134 000 	& 132 000 	& 120 000 	& 110 000  	& 110 000   \\ 
       \hline
     \end{tabular}
   \end{table}
-\end{center}
 
-\todo{Уточнить Simple у CPALockator}
 Реализация Simple не может точно определить, что некоторые эффекты являются несовместным, и из-за этого выдает лишние предупреждения.
 При этом, такая простота реализации никак не помогает при поиске дополнительных ошибок, и время анализа, наоборот, увеличивается, так как много времени тратится на применение большого количества эффектов окружения.
 
@@ -477,10 +509,10 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-thread}
     \begin{tabular}{ | l | c | c | c | c |}
       \hline
-      		& 		\multicolumn{2}{|c|}{ОС РВ 1} & \multicolumn{2}{|c|}{ОС РВ 2} 	\\
+      		& 		\multicolumn{2}{c|}{ОС РВ 1} & \multicolumn{2}{c|}{ОС РВ 2} 	\\
       Подход         					& Simple 	& Base 	& Simple 	& Base 		\\ \hline
-      Число предупреждений 				& 461    	& 461   & 954      	& 954  		\\ 
-      Общее время CPU, с				& 534      	& 658   & 607      	& 626  		\\ 
+      Число предупреждений 				& 461    	& 461   & 981     	& 981  		\\ 
+      Общее время CPU, с				& 534      	& 582   & 887     	& 886  		\\ 
   \hspace{0.5cm} время ThreadCPA, с 	& 0,11 		& 0,17  & 0,148    	& 0,213   	\\
       \hline
     \end{tabular}
@@ -534,7 +566,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-thread-create}
     \begin{tabular}{ | l | c | c | c | c | c | c |}
       \hline
-      				& 		\multicolumn{3}{|c|}{CPALockator-TM} 		& \multicolumn{3}{|c|}{CPALockator} \\
+      				& 		\multicolumn{3}{c|}{CPALockator-TM} 		& \multicolumn{3}{c|}{CPALockator} \\
       Подход         				& Fail 		& Skip 		& Self 		& Fail 	& Skip 		& Self  \\ \hline
       Вердикт "ошибка" 				& 31   		& 32   		& 24   		& 37   	& 36   		& 35   \\ 
   \hspace{0.5cm} из них корректных 	& 23 		& 24 		& 17   		& 29   	& 28   		& 27   \\ 
@@ -560,10 +592,10 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-thread-create}
     \begin{tabular}{ | l | c | c | c | c | c | c |}
       \hline
-      						& 		\multicolumn{3}{|c|}{ОС РВ 1} 		& \multicolumn{3}{|c|}{ОС РВ 2} \\
+      						& 		\multicolumn{3}{c|}{ОС РВ 1} 		& \multicolumn{3}{c|}{ОС РВ 2} \\
       Подход         				& Fail 		& Skip 		& Self 		& Fail 		& Skip 		& Self  \\ \hline
-      Число предупреждений			& 503   	& 503  		& 503  		& 979   	& 979   	& 979   \\ 
-  	  Общее время CPU, с 			& 611 		& 601 		& 601  		& 638   	& 655  		& 610   \\ 
+      Число предупреждений			& 461   	& 461  		& 461  		& 981   	& 981   	& 981   \\ 
+  	  Общее время CPU, с 			& 582 		& 565 		& 607  		& 886   	& 836	  	& 937   \\ 
 \hspace{0.5cm} Время работы ThreadCPA & 0,15	& 0,17 		& 0,12 		& 0,213   	& 0,22 		& 0,16   \\ \hline
       Число созданных потоков  		& 497    	& 497    	& 497   	& 37   		& 37  		& 37   \\ 
       \hline
@@ -598,7 +630,7 @@ Havoc исключает разделяемые переменные еще на
       Вердикт "нет ошибки"  		& 21    	& 21     	\\ 
   \hspace{0.5cm} из них корректных 	& 21 		& 21    	\\
   \hspace{0.5cm} из них некорректных & 0 		& 0    	  	\\ \hline
-      Анализ не завершен       		& 26    	& 26      	\\ \hline
+      Анализ не завершен       		& 33    	& 33      	\\ \hline
       Время CPU, с   				& 25 600 	& 27 300  	\\ 
       \hline
     \end{tabular}
@@ -615,7 +647,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-lock-merge}
     \begin{tabular}{ | l | c | c | c | c | }
       \hline
-      		& 		\multicolumn{2}{|c|}{CPALockator-TM} 	& \multicolumn{2}{|c|}{CPALockator}  \\
+      		& 		\multicolumn{2}{c|}{CPALockator-TM} 	& \multicolumn{2}{c|}{CPALockator}  \\
       Подход         				& Sep 		& Join 		& Sep 		& Join   	\\ \hline
       Вердикт "ошибка" 				& 31   		& 31   		& 37   		& 36   		\\ 
   \hspace{0.5cm} из них корректных 	& 23 		& 23 		& 29   		& 28     	\\ 
@@ -639,17 +671,15 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-lock-merge}
     \begin{tabular}{ | l | c | c | c | c | }
       \hline
-      		& 		\multicolumn{2}{|c|}{ОС РВ 1} & \multicolumn{2}{|c|}{ОС РВ 2}  \\
+      		& 		\multicolumn{2}{c|}{ОС РВ 1} & \multicolumn{2}{c|}{ОС РВ 2}  \\
       Подход         					& Sep 	& Join 	& Sep 	& Join   	\\ \hline
-      Число предупреждений				& 503   & 503   & 979   & \todo{918 ??}   	\\ 
-  	  Общее время CPU (с) 				& 592 	& 600 	& 593   & 542     	\\ 
-  \hspace{0.5cm} Время работы LockCPA, с & 1,6 	& 1,3 	& 1,7   & 1,7     	\\ \hline
-   	  Операций с блокировками			& 38526 & 38526 & 63764 & 57859      	\\ 
+      Число предупреждений				& 461   & 461   & 981   & 981   	\\ 
+  	  Общее время CPU (с) 				& 582 	& 592 	& 886   & 889     	\\ 
+  \hspace{0.5cm} Время работы LockCPA, с & 1,6 	& 1,3 	& 3,0   & 3,1     	\\ \hline
+   	  Операций с блокировками			& 38526 & 41604 & 108367 & 108367      	\\ 
       \hline
     \end{tabular}
   \end{table}
-
-\todo{Мне все это не нравится}
 
 \subsection{Сравнение оптимизаций BAM}
 
@@ -668,15 +698,15 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-lock-reduce}
     \begin{tabular}{ | l | c | c | c | c | c |}
       \hline
-      Подход         				& None 	& Block & All 	& Locks 	& Block-Locks \\ \hline
-      Вердикт "ошибка" 				& 35   	& 34       		& 35    		& 32       	& 32     \\ 
-  \hspace{0.5cm} из них корректных 	& 27 	& 26 			& 27    		& 25       	& 25   \\ 
-  \hspace{0.5cm} из них некорректных & 8 	& 8 			& 8     		& 7       	& 7    \\ \hline
-      Вердикт "нет ошибки"  		& 255   & 255        	& 255   		& 255       & 255     \\ 
-  \hspace{0.5cm} из них корректных 	& 255 	& 255    		& 255   		& 255       & 255     \\
-  \hspace{0.5cm} из них некорректных & 0 	& 0    			& 0     		& 0       	& 0  \\ \hline
-      Анализ не завершен       		& 135    & 136        	& 135    		& 138       & 134  \\ \hline
-      Время CPU (с)   				& 89 600 & 91 000   	& 90 000    	& 90 400    & 91 700  \\ 
+      Подход         				& None 	& Block 	& All 		& Locks 	& Block-Locks \\ \hline
+      Вердикт "ошибка" 				& 35   	& 34       	& 35    	& 32       	& 32     \\ 
+  \hspace{0.5cm} из них корректных 	& 27 	& 26 		& 27    	& 25       	& 25   \\ 
+  \hspace{0.5cm} из них некорректных & 8 	& 8 		& 8     	& 7       	& 7    \\ \hline
+      Вердикт "нет ошибки"  		& 255   & 255       & 255   	& 255       & 255     \\ 
+  \hspace{0.5cm} из них корректных 	& 255 	& 255    	& 255   	& 255       & 255     \\
+  \hspace{0.5cm} из них некорректных & 0 	& 0    		& 0     	& 0       	& 0  \\ \hline
+      Анализ не завершен       		& 135    & 136      & 135    	& 138       & 134  \\ \hline
+      Время CPU (с)   				& 89 600 & 91 000   & 90 000    & 90 400    & 91 700  \\ 
       \hline
     \end{tabular}
   \end{table}
@@ -692,8 +722,8 @@ Havoc исключает разделяемые переменные еще на
     \begin{tabular}{ | l | c | c | c | c | c | c | }
       \hline
       Подход         						& None 			& Block 	& All		& Locks 	& Block-Locks	\\ \hline
-      Число предупреждений 					& 503   		& 503       & 503   	& 503   	& 503       	\\ 
-      Общее время CPU, с 					& 867 			& 660 		& 613   	& 521 		& 647 	 		\\ 
+      Число предупреждений 					& 461   		& 461       & 461   	& 461   	& 461       	\\ 
+      Общее время CPU, с 					& 963 			& 759 		& 717   	& 616 		& 606 	 		\\ 
 \hspace{0.5cm} Время reduce/expand при анализе, с & 0,3		& 0,4 		& 0,4   	& 0,5 		& 0,6 	  		\\ \hline
 % \hspace{0.5cm} Время reduce/expand в конце, с & 0,06		& 0,08 		& 0,08   	& 0,13 		& 0,15 	  		\\ \hline
       Количество попаданий в BAM кэш		& 34305  		& 33893   	& 31656   	& 32893  	& 32893  	\\ 
@@ -708,13 +738,13 @@ Havoc исключает разделяемые переменные еще на
     \begin{tabular}{ | l | c | c | c | c | c | c | }
       \hline
       Подход         						& None 		& Block 	& All 		& Locks 	& Block-Locks 	\\ \hline % & All-Locks	 
-      Число предупреждений 					& 1074  	& 1074      & 979   	& 1074   	& 1074  		\\ % & 979  
-      Общее время CPU, с 					& 2288 		& 2195 		& 904   	& 953 		& 1019 			\\ % & 601  
+      Число предупреждений 					& 981  		& 981      	& 892   	& 981   	& 981  		\\ % & 979  
+      Общее время CPU, с 					& 1211 		& 1090 		& 777   	& 909 		& 858 			\\ % & 601  
 \hspace{0.5cm} Время reduce/expand
  							при анализе, с	& 1,5 		& 3,7 		& 1,3   	& 1,5 		& 1,7 	 		\\ \hline % & 1,5 
 % \hspace{0.5cm} Время reduce/expand в конце, с & ?		& ? 		& ?   		& ? 		& ? 	  		& 	\\ \hline
-      Количество попаданий в BAM кэш		& 352276  	& 349179  	& 199428   	& 267023  	& 267023  		\\ % & 148996 	 
-      										& (84\%)	& (89\%)	& (87\%)	& (91\%) 	& (91\%) 		\\ % & (91\%)	
+      Количество попаданий в BAM кэш		& 284253  	& 285655  	& 157505   	& 239473  	& 239473  		\\ % & 148996 	 
+      										& (85\%)	& (89\%)	& (87\%)	& (91\%) 	& (91\%) 		\\ % & (91\%)	
       \hline
     \end{tabular}
   \end{table}
@@ -725,8 +755,6 @@ Havoc исключает разделяемые переменные еще на
 Например, в начале функции может быть проверка, если данная блокировка еще не захвачена, то она захватывается. 
 Тогда, в случае All состояние на входе в функцию не будет содержать информацию о захваченной ранее блокировке, и она захватится второй раз.
 Но на самом деле она будет захвачена дважды, что может сыграть определенную роль при ее освобождении. 
-
-\todo{Получить одинаковые результаты на ОС!} Сейчас почему-то разный набор unsafe.
 
 \subsection{Использование уточнения}
 
@@ -743,19 +771,18 @@ Havoc исключает разделяемые переменные еще на
     \begin{tabular}{ | l | c | c | }
       \hline 
       Подход         				& Base   	& Refinement \\ \hline
-      Вердикт "ошибка" 				& 262    	& 262       \\ 
-  \hspace{0.5cm} из них корректных 	& 255 		& 255 		\\ 
-  \hspace{0.5cm} из них некорректных & 7 		& 7 		\\ \hline
-      Вердикт "нет ошибки"  		& 26      	& 24       	\\ 
-  \hspace{0.5cm} из них корректных 	& 26 		& 24    	\\
+      Вердикт "ошибка" 				& 33    	& 31       \\ 
+  \hspace{0.5cm} из них корректных 	& 25 		& 23 		\\ 
+  \hspace{0.5cm} из них некорректных & 8 		& 8 		\\ \hline
+      Вердикт "нет ошибки"  		& 255      	& 255       	\\ 
+  \hspace{0.5cm} из них корректных 	& 255 		& 255    	\\
   \hspace{0.5cm} из них некорректных & 0 		& 0    		\\ \hline
       Анализ не завершен       		& 137     	& 139        \\ \hline
-      Время CPU (с)   				& 93 200 	& 92 600    \\ 
+      Время CPU (с)   				& 95 200 	& 94 100    \\ 
       \hline
     \end{tabular}
   \end{table}
 
-\todo{Проверить! Выглядит странно}
 В целом, результаты двух конфигураций на наборе \textit{drivers/net/} отличаются не сильно.
 Это объясняется тем, что обычно используется небольшой набор примитивов синхронизации, который может быть легко вычислен за одну дополнительную итерацию уточнения.
 
@@ -766,18 +793,16 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-lock-refinement}
     \begin{tabular}{ | l | c | c | c | c | }
       \hline
-      		& 			 \multicolumn{2}{|c|}{ОС РВ 1} & 		\multicolumn{2}{|c|}{ОС РВ 2}\\
+      		& 			 \multicolumn{2}{c|}{ОС РВ 1} & 		\multicolumn{2}{c|}{ОС РВ 2}\\
       Подход         					& Base  & Refinement  	& Base  & Refinement 	\\ \hline
-      Выданные предупреждения			& 503   & 501    		& 979   & 1075  		\\ 
-  	  Время CPU, с 						& 592   & 8066 			& 593   & 1810  		\\ 
-  \hspace{0.5cm} Время на LockCPA, с	& 1,6   & 27    		& 1,7   & 4,8  			\\ \hline
-      Операций с блокировками  			& 38526	& 576707   		& 63764 & 147519  		\\ 
-      Количество уточнений  			& 0   	& 20   			& 0   	& \todo{2}  	\\ 
+      Выданные предупреждения			& 461   & 488    		& 981   & 1128  		\\ 
+  	  Время CPU, с 						& 582   & 4952 			& 886   & 5170  		\\ 
+  \hspace{0.5cm} Время на LockCPA, с	& 1,6   & 15    		& 1,7   & 4,8  			\\ \hline
+      Операций с блокировками  			& 38526	& 310422   		& 108367 & 645978  		\\ 
+      Количество уточнений  			& 0   	& 10   			& 0   	& 10  			\\ 
       \hline
     \end{tabular}
   \end{table}
-
-\todo{Почему в одном случае больше unsafe, а в другом - меньше?}
 
 В случае ОС РВ отличия становятся более масштабными, так как количество примитивов синхронизации резко возрастает и требуется значительное количество итераций, чтобы исключить все ложные предупреждения об ошибках, которые появились именно из-за неточностей LockCPA.
 При этом возможный выигрыш из-за построения менее точной абстракции существенно меньше. 
@@ -785,7 +810,7 @@ Havoc исключает разделяемые переменные еще на
 %На Refinement - таймаут! Поэтому не все unsafe успели уточниться.
 
 
-\section{Сравнение оптимизаций для поиска состояний гонки}
+\section{Сравнение вклада в точность анализа дополнительных CPA}
 
 \subsection{Оценка эффекта оптимизации BAM}
 
@@ -825,12 +850,11 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-bam}
     \begin{tabular}{ | l | c | c | c | c |  }
       \hline
-      		& 			 \multicolumn{2}{|c|}{ОС РВ 1} & 	\multicolumn{2}{|c|}{ОС РВ 2}\\ \hline
+      		& 			 \multicolumn{2}{c|}{ОС РВ 1} & 	\multicolumn{2}{c|}{ОС РВ 2}\\ \hline
       Подход         					& Base  & BAM  		& Base  & BAM 	\\ \hline
-      Выданные предупреждения			& 461   & - 	   	& 979   & -  			\\ 
-  	  Время CPU, с 						& 658   & 10024		& 593   & 2000  		\\ 
+      Выданные предупреждения			& 461   & - 	   	& 981   & -  			\\ 
+  	  Время CPU, с 						& 582   & 10024		& 886   & 7843  		\\ 
       Проанализированных потоков		& 497   & 92    	& 37   	& 1  			\\ \hline
-      \hline
     \end{tabular}
   \end{table}
 
@@ -864,34 +888,37 @@ Havoc исключает разделяемые переменные еще на
     \begin{tabular}{ | l | c | c |}
       \hline
       Подход         				& Base 	& Shared 	\\ \hline
-      Вердикт "ошибка" 				& 988   & 988    	\\ 
-  \hspace{0.5cm} из них корректных 	& 789 	& 789 		\\ 
-  \hspace{0.5cm} из них некорректных & 199 	& 199 		\\ \hline
-      Вердикт "нет ошибки"  		& 33    & 33    	\\ 
-  \hspace{0.5cm} из них корректных 	& 33 	& 33    	\\
+      Вердикт "ошибка" 				& 31   	& 33    	\\ 
+  \hspace{0.5cm} из них корректных 	& 23 	& 24 		\\ 
+  \hspace{0.5cm} из них некорректных & 8 	& 9 		\\ \hline
+      Вердикт "нет ошибки"  		& 255   & 254    	\\ 
+  \hspace{0.5cm} из них корректных 	& 255 	& 254    	\\
   \hspace{0.5cm} из них некорректных & 0 	& 0    		\\ \hline
-      Анализ не завершен       		& 26    & 26     	\\ \hline
-      Время CPU (с)   				& 28 400 & 38 200  	\\ 
+      Анализ не завершен       		& 139    & 138     	\\ \hline
+      Время CPU (с)   				& 93 300 & 95 100  	\\ 
       \hline
     \end{tabular}
   \end{table}
 
-\todo{Получить результаты!}
+%Из-за других уточнений наставилось много предикатов.
 
 Результаты сравнения на ядрах ОС РВ представлены в таблице~\ref{table-os-shared}.
 
   \begin{table}[h]\footnotesize \centering
-  	\label{table-os-shared}
     \caption{Сравнение на ядрах ОС РВ}
+  	\label{table-os-shared}
     \begin{tabular}{ | l | c | c | c | c |  }
       \hline
-      		& 			 \multicolumn{2}{|c|}{ОС РВ 1} & 	\multicolumn{2}{|c|}{ОС РВ 2}\\
+      		& 			 \multicolumn{2}{c|}{ОС РВ 1} & 	\multicolumn{2}{c|}{ОС РВ 2}\\
       Подход         					& Base  & Shared  	& Base  & Shared 	\\ \hline
-      Выданные предупреждения			& 461   & 245    	& 979   & 460  			\\ 
-  	  Время CPU, с 						& 658   & 1384  ???	& 593   & 568  		\\ 
+      Выданные предупреждения			& 461   & 218    	& 981   & 447  			\\ 
+  	  Время CPU, с 						& 582   & 1034  	& 886   & 568  		\\ 
+  	  \hspace{0.5cm} Преданализ, с 		& --   	& 21  		& --   	& 19  		\\ 
       \hline
     \end{tabular}
   \end{table}
+
+% В первом случае много вермени тратится на вычисление покрытия с BAM'ом
 
 В данном случае анализ разделяемых данных значительно сокращает количество ложных предупреждений об ошибках, так как отсутствуют секции инициализации данных.
 Таким образом, только анализ разделяемых данных может определить, что предупреждения является ложным.
@@ -903,8 +930,27 @@ Havoc исключает разделяемые переменные еще на
 \item Lightweight. Использование анализа без использования предикатной абстракции
 \end{itemize}
 
+Результаты экспериментов на наборе SV-COMP представлены в таблице~\ref{table-svcomp-without-predicate}.
+
+  \begin{table}[h]\footnotesize \centering
+    \caption{Сравнение на наборе SV-COMP}
+  	\label{table-svcomp-without-predicate}
+    \begin{tabular}{ | l | c | c |}
+      \hline
+      Подход         				&  Predicate	& Lightweight 		\\ \hline
+      Вердикт "ошибка" 				& 1028   		& 1058   	\\ 
+  \hspace{0.5cm} из них корректных 	& 805 			& 808 	 	\\ 
+  \hspace{0.5cm} из них некорректных & 223 			& 250 	   	\\ \hline
+      Вердикт "нет ошибки"  		& 21    		& 0     	\\ 
+  \hspace{0.5cm} из них корректных 	& 21 			& 0    		\\
+  \hspace{0.5cm} из них некорректных & 0 			& 0    	  	\\ \hline
+      Анализ не завершен       		& 33    		& 24      	\\ \hline
+      Время CPU, с   				& 25 600 		& 8 020  	\\ 
+      \hline
+    \end{tabular}
+  \end{table}
+  
 % Сравнивать на sv-comp глупо, так как там всегда есть зависимости по данным
-\todo{Продемонстрировать!}
 
 Результаты сравнения на наборе \textit{drivers/net/} представлены в таблице~\ref{table-drivers-predicate}.
 
@@ -913,7 +959,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-predicate}
     \begin{tabular}{ | l | c | c | c | c |}
       \hline
-      & 			 \multicolumn{2}{|c|}{CPALockator-TM} & 	\multicolumn{2}{|c|}{CPALockator}\\
+      & 			 \multicolumn{2}{c|}{CPALockator-TM} & 	\multicolumn{2}{c|}{CPALockator}\\
       Подход         				& Predicate & Lightweight 	& Predicate & Lightweight\\ \hline
       Вердикт "ошибка" 				& 31   		& 144   	& 37   		& 168  	\\ 
   \hspace{0.5cm} из них корректных 	& 23 		& 86 		& 29   		& 86 	\\ 
@@ -929,7 +975,6 @@ Havoc исключает разделяемые переменные еще на
 
 Результаты показывают, что использование анализа предикатов существенно повышает точность анализа, хотя для некоторых примеров оказывается возможным доказать корректность без него.
 
-
 Результаты сравнения на ядрах ОС РВ представлены в таблице~\ref{table-os-predicate}.
 
   \begin{table}[h] \footnotesize \centering
@@ -937,13 +982,15 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-predicate}
     \begin{tabular}{ | l | c | c | c | c |  }
       \hline
-      		& 			 \multicolumn{2}{|c|}{ОС РВ 1} & 	\multicolumn{2}{|c|}{ОС РВ 2}\\
+      		& 			 \multicolumn{2}{c|}{ОС РВ 1} & 	\multicolumn{2}{c|}{ОС РВ 2}\\
       Подход         					& Predicate  & Lightweight 	& Predicate  & Lightweight 	\\ \hline
-      Выданные предупреждения			& 503   	& 507    		& 918   	& 916  			\\ 
-  	  Время CPU, с 						& 611   	& 107  			& 513   	& 133  		\\ 
+      Выданные предупреждения			& 461   	& 521    		& 981   	& 1037  			\\ 
+  	  Время CPU, с 						& 582   	& 107  			& 886   	& 195  		\\ 
       \hline
     \end{tabular}
   \end{table}
+  
+Заметим, что без анализа предикатов количество предупреждения такое же, как и без ABE.
 
 \todo{Вопросы остаются с lightweight, явно нужно несколько итераций уточнения}
 
@@ -962,6 +1009,19 @@ Havoc исключает разделяемые переменные еще на
 \section{Анализ причин ложных срабатываний}
 
 \subsection{Ложные предупреждения на драйверах ОС Linux}
+
+
+% Linux device drivers
+% Benign: 7
+%EMG: 9
+%Lockator: 25
+%LDVVariables: 2
+%LockAnalysis: 3
+%ad-hoc sync: 2
+%ProtectedGet: 1
+%MemoryModel: 17
+%PredicateAnalysis: 3
+%SharedAnalysis: 2
 
 \subsection{Ложные предупреждения на ОС РВ}
 
@@ -1013,18 +1073,6 @@ Havoc исключает разделяемые переменные еще на
 %Ad-hoc sync: 1
 %Question: 1
 
-
-% Linux device drivers
-% Benign: 7
-%EMG: 9
-%Lockator: 25
-%LDVVariables: 2
-%LockAnalysis: 3
-%ad-hoc sync: 2
-%ProtectedGet: 1
-%MemoryModel: 17
-%PredicateAnalysis: 3
-%SharedAnalysis: 2
 
 
 
